halfway through Lutz comments

--- a/CMS.tex
+++ b/CMS.tex
@@ -1,4 +1,4 @@
-Located at one of the four intersections of the LHC beams, the CMS detector is designed to measure the resulting collisions to high precision~\cite{CMS}. It's key features are high precision measurements of the properties of single particles as well as a good coverage of the 4$\pi$ solid angle. The central element of the CMS detector is a superconducting solenoid. Cooled to $\unit{4.45}{\kelvin}$, it is able to produce a homogeneous magnetic field of $\unit{3.8}{\tesla}$, which allows to measure the momentum of charged particle by bending their trajectories. As shown in Figure~\ref{fig:CMS}, the different components of the detector are layered in cylindrical shapes around the interaction point. The magnet encompasses most of the main subdetectors, namely the tracking system which measures the trajectories of charged particles and the electromagnetic and hadron calorimeters, designed to measure the energy of particles. Located outside of the volume of the solenoid are the iron return yoke and muon detectors. This cylindrical structure is complemented on both sides by endcaps, which close the solid angle in the direction of the beams and are partly located outside the volume of the solenoid. The different components are described in more detail in the following. 
+Located at one of the four intersections of the LHC beams, the CMS detector is designed to measure the resulting collisions to high precision~\cite{CMS}. It's key features are the precise determination of the properties of single particles as well as a good coverage of the 4$\pi$ solid angle. The central element of the CMS detector is a superconducting solenoid. Cooled to $\unit{4.45}{\kelvin}$, it is able to produce a homogeneous magnetic field of $\unit{3.8}{\tesla}$, which allows to measure the momentum of charged particle by bending their trajectories. As shown in Figure~\ref{fig:CMS}, the different components of the detector are layered in cylindrical shapes around the interaction point. The magnet encompasses most of the main subdetectors, namely the tracking system which measures the trajectories of charged particles and the electromagnetic and hadron calorimeters, designed to measure the energy of particles. Located outside of the volume of the solenoid are the iron return yoke and muon detectors. This cylindrical structure is complemented on both sides by endcaps, which close the solid angle in the direction of the beams and are partly located outside the volume of the solenoid. The different components are described in more detail in the following. 
 \begin{figure}[htbp]
 \centering
   \includegraphics[width=0.8\textwidth]{plots/CMS/cms_design.png}
@@ -18,7 +18,7 @@ The innermost part of the tracking system is the pixel detector, which consists 
 \subsubsection*{Silicon strip detector}
 Further away from the interaction point, between $\unit{20}{\centi\meter}$ and $\unit{116}{\centi\meter}$, the granularity of the tracking system is reduced. Silicon strip detectors are used, structured in four layers of the tracker inner barrel (TIB), complemented on each side by the three discs of the tracker inner discs (TID). All this is surrounded by the six layers of the tracker outer barrel (TOB). The tracker endcaps (TECs) consist of nine discs each. The individual strips have a length of about $\unit{10}{\centi\meter}$ and a pitch between $\unit{80}{\micro\meter}$ in the two inner layers of the TIB and $\unit{183}{\micro\meter}$ in the four inner layers of the TOB. The single point resolution in TIB and TOB depends on the layout of the specific layer and varies between $\unit{23}{\micro\meter}$ and $\unit{53}{\micro\meter}$. 
 
-Stereo modules, constructed by placing two modules back to back, rotated by $\unit{100}{\milli\rad}$, are placed in the first two layers of both TIB and TOB, the first two discs of TID, and the first two and the fifth discs of the TECs. These allow for 2-D measurements, with a precision of the $z$ position measurement of $\unit{230}{\micro\meter}$ in TIB and $\unit{530}{\micro\meter}$ in TOB. 
+Stereo modules, constructed by placing two modules back to back, rotated by $\unit{100}{\milli\rad}$, are placed in the first two layers of both TIB and TOB, the first two rings of TID, and the first two and the fifth ring of the TECs. These allow for 2-D measurements, with a precision of the $z$ position measurement of $\unit{230}{\micro\meter}$ in TIB and $\unit{530}{\micro\meter}$ in TOB. 
 
 For high momentum tracks of about $\unit{100}{\giga\electronvolt}$ in the region of $\vert \eta \vert < 1.6$ a \pt resolution of 1-2\% is achieved, while the impact parameter of these tracks can be measured with a resolution of about $\unit{10}{\micro\meter}$. 
 
@@ -66,7 +66,7 @@ Of all subdetectors of CMS, the HF covers the highest values of $\vert\eta\vert$
 \subsection{Muon system} 
 Muons are in general not stopped by any of the subdetectors of the CMS detector inside the solenoid. Therefore, they can be measured with high precision in a clean environment outside of it. Hence, the muon detectors are placed inside the return yoke of the magnet, both for the muon barrel (MB), covering up to $\vert\eta\vert = 1.2$ and the muon endcap (ME) detectors, placed between $\vert\eta\vert = 0.9$ and $\vert\eta\vert = 2.4$. Being placed so far away from the interaction point, the muon detectors have to cover a large area, which requires them to be rather inexpensive compared to other technologies used in the construction of CMS. Three different types of gaseous detectors are used to provide at the same time identification, \pt measurement, and triggering for muons. In the barrel region, drift tubes (DT) are used as the main muon detectors, whereas in the endcaps cathode strip chambers (CSC) are used which are faster and better equipped to deal with the larger and inhomogeneous magnetic field in this region of the detector. To provide a very fast muon tagging for the trigger, resistive plate chambers (RPC) complement the other two technologies in both the barrel and the endcaps. 
 \subsubsection*{Drift tubes (DT)}
-In the barrel, there are four layers of muon detectors, called muon stations, of which two are located inside the return yoke of the magnet and the other two are located between the solenoid and the yoke and outside the yoke, respectively. The muon stations consist of eight to twelve muon chambers, which are made of two or three superlayers of DTs. The superlayers in turn consist of four layers of DTs. The first three muon stations contain chambers with superlayers measuring either in the $r-\phi$ plane or measuring the $z$ coordinate. In the last muon station only the superlayers measuring in $r-\phi$ are present. The DTs in each layer are offset by half of the width of a tube with respect to the next one to avoid dead spots in the geometric coverage. The DT system consists of about 172000 sensitive wires. The drift tubes are filled with a mixture of 85\% Ar and 15\% $CO_2$, and their structure is shown in Figure~\ref{fig:DT} The $r\phi$ resolution of a single layer of DT is about $\unit{250}{\micro\meter}$, so that one chamber reaches a precision of $\unit{100}{\micro\meter}$.
+In the barrel, there are four layers of muon detectors, called muon stations, of which two are located inside the return yoke of the magnet and the other two are located between the solenoid and the yoke and outside the yoke, respectively. The muon stations consist of eight to twelve muon chambers, which are made of two or three superlayers of DTs. The superlayers in turn consist of four layers of DTs. The first three muon stations contain chambers with superlayers measuring either in the $r-\phi$ plane or measuring the $z$ coordinate. In the last muon station only the superlayers measuring in $r-\phi$ are present. The DTs in each layer are offset by half of the width of a tube with respect to the next one to avoid dead spots in the geometric coverage. The DT system consists of about 172000 sensitive wires. The drift tubes are filled with a mixture of 85\% Ar and 15\% $\text{CO}_2$, and their structure is shown in Figure~\ref{fig:DT} The $r\phi$ resolution of a single DT is about $\unit{250}{\micro\meter}$, so that one muon chamber, which contains two superlayers with four DTs measuring in the $r-\phi$ plane each, reaches a precision of $\unit{100}{\micro\meter}$.
 \begin{figure}[htbp]
 \centering
   \includegraphics[width=0.6\textwidth]{plots/CMS/DT.png}
@@ -74,7 +74,7 @@ In the barrel, there are four layers of muon detectors, called muon stations, of
 \label{fig:DT}
 \end{figure}  
 \subsubsection*{Cathode strip chambers (CSC)}
-The CSC are multiwire proportional chambers, consisting of six planes of anode wires interleaved with seven panels of cathode strips. The chambers have trapezoidal shapes and are arranged in four discs around the beam axis, each further segmented into two or three rings. The cathode strips measure the $\phi$ coordinate while the anode wires measure the radial coordinate. Figure~\ref{fig:CSC} shows the structure of one chamber on the left side and the creation of a signal due to a amplification of the initial ionisation in an avalanche close to the anode wire on the right side. 
+The CSC are multiwire proportional chambers, consisting of six planes of anode wires interleaved with seven panels of cathode strips. The chambers have trapezoidal shapes and are arranged in four discs around the beam axis, each further segmented into two or three rings. The cathode strips measure the $\phi$ coordinate while the anode wires measure the radial coordinate. Figure~\ref{fig:CSC} shows the structure of one chamber on the left side and the creation of a signal due to an amplification of the initial ionisation in an avalanche close to the anode wire on the right side. 
 \begin{figure}[htbp]
 \centering
   \includegraphics[width=0.85\textwidth]{plots/CMS/CSC.png}
