--- a/LHC.tex
+++ b/LHC.tex
@@ -1,5 +1,5 @@
 \label{sec:LHC}
-The LHC~\cite{LHC}, located at CERN near Geneva, is capable of colliding protons and lead ions at higher energies than any of its predecessors. The instantaneous luminosity delivered to the experiments exceeds that of any previous machine at the energy frontier. It was constructed in the tunnel formerly inhabited by the LEP electron-positron collider in $\unit{100}{\meter}$ depths below the surface with a circumference of $\unit{27}{\kilo\meter}$. The design goal was to achieve proton collisions at a centre-of-mass energy of $\sqrt{s} = \unit{14}{\tera\electronvolt}$ with instantaneous luminosities of $\unit{10^{34}}{\reciprocal\second\meter\rpsquared}$. 
+The LHC~\cite{LHC}, located at CERN near Geneva, is capable of colliding protons and lead ions at higher energies than any of its predecessors. The instantaneous luminosity delivered to the experiments exceeds that of any previous machine at the energy frontier. It was constructed in the tunnel formerly inhabited by the LEP electron-positron collider in about $\unit{100}{\meter}$ depths below the surface with a circumference of $\unit{27}{\kilo\meter}$. The design goal was to achieve proton collisions at a centre-of-mass energy of $\sqrt{s} = \unit{14}{\tera\electronvolt}$ with instantaneous luminosities of $\unit{10^{34}}{\reciprocal\second\meter\rpsquared}$. 
 
 The LHC consists of eight arcs, as shown in Figure~\ref{fig:LHC}, where superconducting dipole magnets provide a magnetic field of up to $\unit{8.3}{\tesla}$ to bend the charged particles along the curvature of the tunnel, while quadrupole and other specialised magnets are used to focus the beams. In straight segments between these arcs, LHC infrastructure and the experiments are located. The infrastructure components include the cooling facilities necessary to reach a temperature of $\unit{1.9}{\kelvin}$ around the ring, the superconducting cavities in which the protons are accelerated by standing electromagnetic waves, collimators for beam cleaning, and the beam dump, where the beams are ejected from the LHC at the end of fills. In the other four straight segments the beams are brought into collisions, which are studied by the four large experiments at the LHC. Of these, CMS~\cite{CMS} and ATLAS (A large LHC apperatus)~\cite{ATLAS} are multi-purpose detectors with a diverse physics program, while ALICE (A large ion collider experiment)~\cite{ALICE} and LHCb (LHC beauty experiment)~\cite{LHCb} are specialised on heavy ion collisions and flavour physics, respectively. 
 
