--- a/appendixROutIn.tex
+++ b/appendixROutIn.tex
@@ -1,4 +1,4 @@
-\chapter{Dependencies of \Routin}
+\chapter{Dependencies of $\mathbf{R}_{\text{out/in}}$}
 In addition to the results for the low-mass region already shown in Section~\ref{sec:ROutIn}, the dependency of \Routin on \MET and \njets is also studied for the high-mass region. The corresponding results are shown in Figure~\ref{fig:ROutInDependencies2}. As for the low-mass region, no significant dependencies are observed.
 \label{app:routin}
 
