--- a/appendixRT.tex
+++ b/appendixRT.tex
@@ -1,4 +1,4 @@
-\chapter{Dependencies of \RT}
+\chapter{Dependencies of $\mathbf{R}_{\mathrm{T}}$}
 \label{app:RT}
 In Section~\ref{sec:rmue}, the dependency of \RT on \mll, \njets, and \MET has been shown. Here, additional dependency plots are given here for the \pt of the leading and trailing lepton (Figure~\ref{fig:RTDependenciesApp1}, the $|\eta|$ of the trailing lepton and \HT (Figure~\ref{fig:RTDependenciesApp2}), and $N_{\text{Vertex}}$ in Figure~\ref{fig:RTDependenciesApp3}. No significant dependency is observed for either of those variables.
 
