--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,13 +1,13 @@
-In this thesis a search for supersymmetry in final states with two same-flavour opposite-sign leptons, using full dataset of proton-proton collisions recorded by the CMS in 2012, corresponding to \lumi, has been presented. The analysis has focused on the correlated production of leptons in the decay of a neutralino, resulting in a distinct edge structure in the distribution of the invariant mass  of the lepton pairs. 
+In this thesis a search for supersymmetry in final states with two same-flavour opposite-sign leptons, using full dataset of proton-proton collisions recorded by the CMS in 2012, corresponding to \lumi, has been presented. The analysis has focused on the correlated production of leptons in the decay of a neutralino, resulting in a distinct edge structure in the invariant mass distribution of the lepton pairs. 
 
-The characteristic signature of the strong production of supersymmetric particles in R-partiy convserving models, namely the presence of hadronic jets and missing transverse energy, has been exploited to separate a potential signal from the Standard Model backgrounds. The contributions of Standard Model processes to the thereby defined event selection have been estimated exclusively from the data itself. The most dominant backgrounds are symmetric in the production of same-flavour and opposite flavour lepton pairs. Therefore, the estimates for these backgrounds have been derived from the opposite-flavour event sample. Corrections for efficiency effects were derived using two independent methods and taken into account in these estimates, for which a precision of 5-10\% have been achieved.  The validity of this approach has been established using both data and simulated events. 
+The characteristic signature of the strong production of supersymmetric particles in R-partiy convserving models, namely the presence of hadronic jets and missing transverse energy, has been exploited to separate a potential signal from the Standard Model backgrounds. The contributions of Standard Model processes to the thereby defined event selection have been estimated exclusively from the data itself. The most dominant backgrounds are symmetric in the production of same-flavour and opposite flavour lepton pairs. Therefore, the estimates for these backgrounds have been derived from the opposite-flavour event sample. Corrections for efficiency effects were derived using two independent methods and taken into account in these estimates, for which a precision of 5-10\% has been achieved, depending on lepton pseudorapidity. The validity of this approach has been established using both data and simulated events. 
 
-In search of edges in the dilepton mass distribtuon, shape information have been used by performing an unbinned maximum likelihood fit to both the same-flavour and opposite-flavour event samples. The fit consists of parametrisations for flavour-symmetric and Drell--Yan background and a triangular signal model. The best fit is found including a signal contribution with an endpoint of the signal shape of $\unit{82.4^{+2.1}_{-3.3}}{\giga\electronvolt}$ and signal yields of $140\pm44$ events for events where both leptons are reconstructed in the central part of the CMS detector and $2\pm22$ events for events where at least one of the leptons is located in the one of the endcaps. The observed effect corresponds to a local significance of $2.5\,\sigma$, which reduces to $1.7\,\sigma$ is the probability to observe an equal or large effect anywhere in the considered mass range is taken into account. 
+In the search of edges in the dilepton mass distribution, shape information was used by performing an unbinned maximum likelihood fit to both the same-flavour and opposite-flavour event samples. The fit consists of parametrisations for flavour-symmetric and Drell--Yan background and a triangular signal model. The best fit is found including a signal contribution with an endpoint of the signal shape of $\unit{82.4^{+2.1}_{-3.3}}{\giga\electronvolt}$ and signal yields of $140\pm44$ events for events where both leptons are reconstructed in the central part of the CMS detector and $2\pm22$ events for events where at least one of the leptons is located in the one of the endcaps. The observed effect corresponds to a local significance of $2.5\,\sigma$, which reduces to $1.7\,\sigma$ if the probability to observe an equal or large effect anywhere in the considered mass range is taken into account. 
 
-In a second approach event yields are compared to the background estimates in six region of dilepton mass and lepton pseudorapidity. They are found to be consistent with each other except in the mass range $\unit{20}{\giga\electronvolt} < \mll < \unit{70}{\giga\electronvolt}$, where an excess of $109\pm48$ events is observed, corresponding to a local significance of $2.2\,\sigma$. The results of this approach are found to be consistent with the fit. 
+In a second approach, event yields are compared to the background estimates in six region of dilepton mass and lepton pseudorapidity. They are found to be consistent with each other except in the mass range $\unit{20}{\giga\electronvolt} < \mll < \unit{70}{\giga\electronvolt}$, where an excess of $109\pm48$ events is observed, corresponding to a local significance of $2.2\,\sigma$. The results of this approach are found to be consistent with the fit. 
 
-The properties of the events in the excess differ not significantly from those of the backgrounds. No systematic effects responsible for the observation have been found. The development of the effect over time shows that it is only present in roughly the first half of the recorded data. 
+The properties of the events in the excess differ not significantly from those of the expected backgrounds. No systematic effects responsible for the observation have been found. The development of the effect over time shows that it is only present in roughly the first half of the recorded data. Therefore, the excess is compatible with statistical fluctuations of the background at this point.
 
 As no clear hint for the presence of supersymmetry has been observed, exclusion limits are set in two simplified models which simulate the pair production of bottom squarks. These models contain the decay $\secondchi \rightarrow \firstchi \ell\ell$ either via an off-shell \Z boson (fixed-edge model) or via both sleptons or on- and off-shell \Z bosons (slepton-edge model). In the first model, \sbottom masses up to $\unit{375}{\giga\electronvolt}$ have been exluded, depending on the mass of the \secondchi. In the second model, in which the branching ratio into lepton pairs is much higher, the limit ranges from $\unit{470}{\giga\electronvolt}$ to $\unit{590}{\giga\electronvolt}$, again depending on $m_{\secondchi}$. 
 
-At the time of writing this thesis, the Large Hadron Collider has begun the commissioning of the machine for the next run at  an increased centre-of-mass energy of $\unit{13}{\tera\electronvolt}$. After two years of shut-down, new data is eagerly awaited and preparations are ongoing for the analysis of the new dataset. The expected integrated luminosity for 2015 of about $10\,\mathrm{fb}^{-1}$ will probably not be sufficient to reach the same sensitivity of the analysis presented here. Nevertheless it is expected to provide an indication if the observed excess in the 2012 dataset might have been a first hint of a signal for new physics after all. 
+At the time of writing this thesis, the Large Hadron Collider has begun the commissioning for the next run at  an increased centre-of-mass energy of $\unit{13}{\tera\electronvolt}$. After two years of shut-down, new data is eagerly awaited and preparations are ongoing for the analysis of the new dataset. The expected integrated luminosity for 2015 of about $10\,\mathrm{fb}^{-1}$ will probably not be sufficient to reach the same sensitivity of the analysis presented here. Nevertheless, it is expected to provide an indication if the observed excess in the 2012 dataset is a first hint of a signal for new physics after all. 
