--- a/intro.tex
+++ b/intro.tex
@@ -1,14 +1,14 @@
 The desire to understand the fundamental building blocks and underlying structures of our world has driven humanity's exploration of physics at the smallest scales. What started out as a pursuit of ideas purely within the mind in ancient Greece has developed into a fruitful interplay of both experiment and theory in modern particle physics. Today the Standard Model of particle physics describes the known particles and their interactions and has withstood countless experimental challenges. However, theoretical concerns and the desire to incorporate experimental observations not yet described within the Standard Model have lead to the conviction that yet unknown physical effects will manifest themselves if particle interactions are probed at energy scales of $\mathcal{O}$($\mathrm{TeV}$).
 
-This is the purpose of the Large Hadron Collider (LHC), which collides protons at centre-of-mass energies of several $\mathrm{TeV}$. In addition to many precision measurements of established phenomena at this previously inaccessible energy scale, discovering the Higgs boson and thereby completing the Standard Model has been a large success of this undertaking. Now the focus lies even more on going beyond the Standard Model into the realm of new physics. Many ideas exists on how to extend the existing theory and an extensive search program is conducted in search of the new particles and interactions predicted by those models. 
+This is a main purpose of the Large Hadron Collider (LHC), which collides protons at centre-of-mass energies of several $\mathrm{TeV}$. In addition to many precision measurements of established phenomena at this previously inaccessible energy scale, discovering the Higgs boson and thereby completing the Standard Model has been a large success of this undertaking. Now the focus lies even more on going beyond the Standard Model into the realm of new physics. Many ideas exists on how to extend the existing theory and an extensive search program is conducted to find the new particles and interactions predicted by those models. 
 
 One of the most attractive concepts is that of Supersymmetry, which introduces a symmetry between fermions and bosons. In this framework, a partner particle to each of the known Standard Model particles exists, differing in spin by $\frac{1}{2}\hbar$. In principle these partners have the same mass as their Standard Model counterparts. However, none of them have been discovered yet, which implies that Supersymmetry is broken, allowing for higher masses of the supersymmetric particles.
 
 In this analysis, evidence for the existence of heavy supersymmetric particles is sought, exploiting a characteristic signature of their decay. In the decay of a neutralino particle, two charged leptons of the same flavour and opposite sign can be produced together with a lighter neutralino, which escapes detection. This correlated production of the leptons results in a characteristic edge in the distribution of their invariant mass.
 
-The full data sample of proton-proton collisions at a centre-of-mass energy of 8\TeV recorded by the Compact Muon Solenoid (CMS) experiment in 2012, corresponding to an integrated luminosity of \lumi, is used. The presence of a supersymmetric signal in the data is assessed in two ways. First, event counts in different selections are compared to the expectation from Standard Model backgrounds. In a second approach, the characteristic edge signature is used in a shape analysis to separate a possible signal from the backgrounds. In the both cases, the background contributions are estimated entirely from data. 
+The full data sample of proton-proton collisions at a centre-of-mass energy of 8\TeV recorded by the Compact Muon Solenoid (CMS) experiment in 2012, corresponding to an integrated luminosity of \lumi, is used. The presence of a supersymmetric signal in the data is assessed in two ways. First, event counts in different selections are compared to the expectation from Standard Model backgrounds. In a second approach, the characteristic edge signature is used in a shape analysis to separate a possible signal from the backgrounds. In both cases, the background contributions are estimated entirely from data. 
 
-This work builds upon the previous achievements by Nikals Mohr and Daniel Sprenger in their doctoral theses~\cite{Mohr:1423334,Sprenger:1501963} and has been performed in part in collaboration with Marco-Andrea Buchmann~\cite{Buchmann:1704399}. The results have been published by the CMS collaboration~\cite{Khachatryan:2015lwa}. This analysis presents an update of the published result, taking into account a later reprocessing of the data sample with improved calibrations. However, the analysis techniques have not been altered and the outcome of the analysis remains largely unchanged.
+This work builds upon the previous achievements by Niklas Mohr and Daniel Sprenger in their doctoral theses~\cite{Mohr:1423334,Sprenger:1501963} on earlier datasets and has been performed in part in collaboration with Marco-Andrea Buchmann of ETH Z\"urich~\cite{Buchmann:1704399}. The results of this analysis have been published by the CMS collaboration~\cite{Khachatryan:2015lwa}. Here, an update of the published result is presented, taking into account a later reprocessing of the data sample with improved calibrations. However, the analysis techniques have not been altered and the outcome of the published analysis remains largely unchanged.
 
 This thesis is structured as follows: The remainder of this section is dedicated to the definition of commonly used variables. Section~\ref{sec:theo} discusses the theoretical foundations relevant to the analysis. In Section~\ref{sec:setup} the LHC and the CMS detector are described. The methods used to analyse the recorded data are outlined in Section~\ref{sec:ana} and the estimation of Standard Model backgrounds from data is presented in Section~\ref{sec:backgrounds}. The results of the analysis in the two approaches discussed above are presented in Sections~\ref{sec:counting} and~\ref{sec:fit}. 
 
@@ -22,7 +22,7 @@ Energies and momenta are measured in \GeV and lengths in $\text{\GeV}^{-1}$. How
 
 The cross section of a physical process is given in barn, $\unit{1}{\barn}$ corresponding to $\unit{10^{-24}}{\centi\meter\squared}$.   
 
-The CMS experiment uses a right-handed coordinate system where the x- and y-axis point perpendicular to the beam direction towards the center of the LHC and upwards, respectively. The z-axis points in the direction of the counter-clockwise beam.  These coordinates are usually transformed into a spherical coordinate system where $\phi$ is the azimuthal and $\theta$ is the polar angle. Instead of $\theta$ the pseudorapidity 
+The CMS experiment uses a right-handed coordinate system where the $x$- and $y$-axis point perpendicular to the beam direction towards the center of the LHC and upwards, respectively. The $z$-axis points in the direction of the counter-clockwise beam.  These coordinates are usually transformed into a spherical coordinate system where $\phi$ is the azimuthal and $\theta$ is the polar angle. Instead of $\theta$ the pseudorapidity 
 \begin{equation}
 \eta = -\ln \left( \tan\left(\frac{\theta}{2}\right)\right)
 \end{equation}
@@ -31,11 +31,11 @@ is commonly used, which coincides with the rapidity $y = \frac{1}{2} \ln\left(\f
 \Delta R = \sqrt{(\phi_1 - \phi_2)^2 + (\eta_1 - \eta_2)^2}.
 \end{equation}
 
-As the collisions at hadron colliders involve interactions of partons carrying unknown fractions of the protons' momenta, the momentum of the initial state along the beam axis is unknown. As the momenta of the partons transverse to the beam are negligible compared to those in z direction, the transverse plane provides a well defined initial state. Therefore, the transverse momentum and energy
+As the collisions at hadron colliders involve interactions of partons carrying unknown fractions of the protons' momenta, the momentum of the initial state along the beam axis is unknown. As the momenta of the partons transverse to the beam are negligible compared to those in $z$ direction, the transverse plane provides a well defined initial state. Therefore, the transverse momentum and energy
 \begin{eqnarray}
-\pt = \sqrt{p_x^2  + p_y^2} = p\cdot \sin\left(\theta\right), & \Et = \sqrt{E_x^2  + E_y^2} = E\cdot \sin\left(\theta\right)
+\vec{p}_{\mathrm{T}} = \sqrt{p_x^2  + p_y^2} = \vec{p}\cdot \sin\left(\theta\right), & \Et = E\cdot \sin\left(\theta\right)
 \end{eqnarray}
-are often used. The vectorial sum of the particles' \pt must be zero because of conservation of linear momentum. This is why the missing transverse energy 
+are often used. The absolute value of $\vec{p}_{\mathrm{T}}$ is denoted \pt. The vectorial sum of the final state particles' $\vec{p}_{\mathrm{T}}$ must be zero because of conservation of linear momentum. This is why the missing transverse energy 
 \begin{equation}
 \METVec = - \sum\limits_{\text{particles}} \vec{p}_{\mathrm{T}}
 \end{equation}
