--- a/setup.tex
+++ b/setup.tex
@@ -4,6 +4,6 @@ This analysis relies on data recorded by the CMS experiment at the CERN LHC. Bot
 \input{LHC}
 \section{CMS detector}
 \input{CMS}
-\section{Trigger and data acquisition}
+\subsection{Trigger and data acquisition}
 \label{sec:trigger}
 \input{DAQTrig}
