--- a/tab/table_Rsfof_full.tex
+++ b/tab/table_Rsfof_full.tex
@@ -3,7 +3,7 @@
  \renewcommand{\arraystretch}{1.3}
  \setlength{\belowcaptionskip}{6pt}
  \centering
- \caption{Observed event yields in the control region and the resulting values of \Rsfof, \Reeof, and \Rmmof. The results are shown separately for the central and forward lepton selection and the same quantities derived on simulation are shown for comparison.}
+ \caption{Observed event yields in the control region and the resulting values of \Rsfof, \Reeof, and \Rmmof. The results are shown separately for the central and forward lepton selection and the same quantities derived on simulation are shown for comparison. For the simulation, the ratio between the values of \Rsfof, \Reeof, and \Rmmof measured in the signal and control region is shown.}
   \label{tab:rSFOF}
 \begin{tabular}{l|c|c|c|c}
 \multicolumn{5}{c}{Control region}\\ \hline     
