--- a/tab/table_TriggerEffsExclusive_Seperated.tex
+++ b/tab/table_TriggerEffsExclusive_Seperated.tex
@@ -4,7 +4,7 @@
 \renewcommand{\arraystretch}{1.2} 
 \begin{tabular}{l|c|c|c|c|c|c}     
 
- & nominator & denominator & $\epsilon_{\text{trigger}} \pm \sigma_{\text{stat}}$ &  nominator & denominator & $\epsilon_{\text{trigger}} \pm \sigma_{\text{stat}}$  \\ 
+ & nominator & denominator & $\epsilon_{\ell\ell}^{T} \pm \sigma_{\text{stat}}$ &  nominator & denominator & $\epsilon_{\ell\ell}^{T} \pm \sigma_{\text{stat}}$  \\ 
 \hline
 
 &\multicolumn{6}{c}{Data} \\
