--- a/tab/table_rMuE_result.tex
+++ b/tab/table_rMuE_result.tex
@@ -3,7 +3,7 @@
  \renewcommand{\arraystretch}{1.3}
  \setlength{\belowcaptionskip}{6pt}
  \centering
- \caption{Result of the calculation of \rmue. Shown are the observed event yields in the Drell--Yan control region for the central and forward lepton selection in the \EE and \MM channels and the resulting values of 
+ \caption{Result of the measurement of \rmue. Shown are the observed event yields in the Drell--Yan control region for the central and forward lepton selection in the \EE and \MM channels and the resulting values of 
 \rmue. The same quantaties derived from simulation are shown for comparison.}
   \label{tab:rMuE}
   \begin{tabular}{l| ccc }
