--- a/theory.tex
+++ b/theory.tex
@@ -14,10 +14,10 @@ The fermions are in turn classified as quarks or leptons. The different types of
   & \multicolumn{3}{c|}{Leptons} & \multicolumn{3}{c}{Quarks} \\
     & flavour & charge [$e$] & mass [GeV] & flavour & charge [$e$] & mass [GeV] \\
     \hline
-  \multirow{2}{*}{1$^{\mathrm{st}}$ generation} & $e$ & -1 & 5.1$\cdot$10$^{\mathrm{-4}}$ &  down & $-\frac{1}{3}$ & $2.3^{+0.7}_{-0.5}\cdot10^{-3}$ \\
- 												& $\nu_e$ & 0 & $<2\cdot10^{-9}$ &  up & $+\frac{2}{3}$ & $4.8^{+0.5}_{-0.3}\cdot10^{-3}$  \\
+  \multirow{2}{*}{1$^{\mathrm{st}}$ generation} & $e$ & -1 & 5.1$\cdot$10$^{\mathrm{-4}}$ &  down & $-\frac{1}{3}$ & $(2.3^{+0.7}_{-0.5})\cdot10^{-3}$ \\
+ 												& $\nu_e$ & 0 & $<2\cdot10^{-9}$ &  up & $+\frac{2}{3}$ & $(4.8^{+0.5}_{-0.3})\cdot10^{-3}$  \\
  												\hline
-  \multirow{2}{*}{2$^{\mathrm{nd}}$ generation} & $\mu$ & -1  & 0.1 & strange & $-\frac{1}{3}$ & $9.5\pm0.5\cdot10^{-2}$ \\
+  \multirow{2}{*}{2$^{\mathrm{nd}}$ generation} & $\mu$ & -1  & 0.1 & strange & $-\frac{1}{3}$ & $(9.5\pm0.5)\cdot10^{-2}$ \\
  												& $\nu_{\mu}$ & 0 & $<2\cdot10^{-9}$ & charm & $+\frac{2}{3}$ & $1.28\pm0.03$ \\
  												\hline
   \multirow{2}{*}{3$^{\mathrm{rd}}$ generation} & $\tau$ & -1 & 1.8 & bottom & $-\frac{1}{3}$ & $4.18\pm0.03$\\
@@ -28,45 +28,45 @@ The fermions are in turn classified as quarks or leptons. The different types of
 
 \end{table}
 
-Of the four fundamental forces, the electromagnetic, weak, strong and gravitational forces, the first three are described by the SM. Each of these forces is mediated by spin-1 gauge bosons. In the case of the electromagnetic force this is the massless photon, which couples to the electric charge of particles. The weak force is mediated by three massive bosons, the $\W^{\pm}$ ($m_{\W} = \unit{80.4}{\giga\electronvolt}$) and the $\Z^{0}$ ($m_{\mathrm{Z}} = \unit{91.2}{\giga\electronvolt}$), coupling to the weak charge. The charge of the strong force is called colour, to which 8 massless gluons couple. Of all fermions, only the quarks carry colour and participate in the strong interaction. 
+Of the four fundamental forces, the electromagnetic, weak, strong, and gravitational forces, the first three are described by the SM. Each of these forces is mediated by spin-1 gauge bosons. In the case of the electromagnetic force this is the massless photon, which couples to the electric charge of particles. The weak force is mediated by three massive bosons, the $\W^{\pm}$ ($m_{\W} = \unit{80.4}{\giga\electronvolt}$) and the $\Z^{0}$ ($m_{\mathrm{Z}} = \unit{91.2}{\giga\electronvolt}$), coupling to the weak charge. The charge of the strong force is called colour, to which 8 massless gluons couple. Of all fermions, only the quarks carry colour and participate in the strong interaction. 
 
-The group structure of the SM is $SU(3)_C \times SU(2)_L \times U(1)_Y$. The $SU(3)_C$, with $C$ representing the colour charge, is the gauge group associated with the strong interaction. From the non-abelian structure of this group follows the presence of three- and four-gluon interactions in the SM~\cite{Pich:2007vu}. Therefore, the strong interaction increases with distance, leading coloured particles to only exist in bound states. So far the existence of two- and three-quark states (mesons and baryons) has been established. 
+The group structure of the SM is $SU(3)_C \times SU(2)_L \times U(1)_Y$. The $SU(3)_C$, with $C$ representing the colour charge, is the gauge group associated with the strong interaction. From the non-abelian structure of this group follows the presence of three- and four-gluon interactions in the SM~\cite{Pich:2007vu}. Therefore, the strong interaction increases with distance, resulting in coloured particles only existing in bound states. So far the existence of two- and three-quark states (mesons and baryons) has been established. 
 
-The subgroup $SU(2)_L \times U(1)_Y$ describes the unification of weak and electromagnetic interaction in the electroweak theory. The index $L$ indicates that the weak isospin $T$ couples only to left-handed particles and $Y$ is the weak hypercharge. The $SU(3)_L$ introduces three vector fields, of which two mix to the observed $\W^{\pm}$ = $\frac{1}{\sqrt{2}}(\W^1\mp i\W^2)$. The remaining neutral $\W^3$ mixes with the $\mathrm{B}^0$ arising from the $U(1)_Y$ group to form the photon and \Z boson~\cite{HalzenMartin}.
+The subgroup $SU(2)_L \times U(1)_Y$ describes the unification of weak and electromagnetic interactions in the electroweak theory. The index $L$ indicates that the weak isospin $T$ couples only to left-handed particles. $Y$ is the weak hypercharge. The $SU(2)_L$ introduces three vector fields, of which two mix to the observed $\W^{\pm}$ = $\frac{1}{\sqrt{2}}(\W^1\mp i\W^2)$. The remaining neutral $\W^3$ mixes with the $\mathrm{B}^0$ arising from the $U(1)_Y$ group to form the photon and \Z boson~\cite{HalzenMartin}.
 
-To give masses to the particles, the Higgs mechanism is introduced~\cite{PhysRevLett.13.508,PhysRevLett.13.321,PhysRevLett.13.585}. It postulates a complex scalar doublet that spontaneously breaks the $SU(2)_L$ gauge symmetry, allowing to give masses to the electro-weak gauge bosons while the $U(1)_Y$ remains unbroken and the photon massless. Fermions acquire mass through a Yukawa coupling to the Higgs field. The Higgs mechanism results in the presence of a massive neutral scalar boson. The discovery of such a particle with a mass of $\unit{125.09\pm0.24}{\giga\electronvolt}$~\cite{Aad:2015zhl} by the CMS and ATLAS collaborations at the LHC in 2012~\cite{Chatrchyan:2012ufa,Aad:2012tfa} and the good agreement of its properties with the prediction of the SM~\cite{Khachatryan:2014jba} provides evidence for the validity of this theory.   
+To give masses to the particles, the Higgs mechanism is introduced~\cite{PhysRevLett.13.508,PhysRevLett.13.321,PhysRevLett.13.585}. It postulates a complex scalar doublet that spontaneously breaks the $SU(2)_L \times U(1)_Y$ gauge symmetry, allowing to give masses to the electro-weak gauge bosons while the photon remains massless. Fermions acquire mass through a Yukawa coupling to the Higgs field. The Higgs mechanism results in the presence of a massive neutral scalar boson. The discovery of such a particle with a mass of $\unit{125.09\pm0.24}{\giga\electronvolt}$~\cite{Aad:2015zhl} by the CMS and ATLAS collaborations at the LHC in 2012~\cite{Chatrchyan:2012ufa,Aad:2012tfa} and the good agreement of its properties with the prediction of the SM~\cite{Khachatryan:2014jba} provides evidence for the validity of this theory.   
 
 \subsection*{Shortcomings of the Standard Model}
 The discovery of the Higgs boson is a large success for the SM, and only the last in a long series of experimental results supporting the decades old theory. However, for a long time also the shortcomings of the SM have been known. Here only those most relevant to the motivation of Supersymmetry are discussed.
 
 \subsubsection*{Higgs mass and naturalness}
-One of the most pressing issues is directly related to the Higgs boson and its mass. Quantum loop corrections to the bare Higgs boson mass-squared change the observable mass of the particle. For example the coupling to a fermion with coupling strength $\lambda_f$ results in a correction of
+One of the most pressing issues is directly related to the scalar Higgs boson and its mass. Quantum loop corrections to the bare Higgs boson mass-squared change the observable mass of the particle. For example the coupling to a fermion with coupling strength $\lambda_f$ results in a correction of
 \begin{equation}
 \Delta m_{\mathrm{H}}^2 = -\frac{|\lambda_f^2|}{8\pi^2}\Lambda_{UV}^2 + ...,
 \end{equation}
-where $\Lambda_{UV}$ represents the energy scale up to which the SM is valid as an effective theory, i.e. the scale at which new physics will be appear. This can be as large as the reduced Planck scale $M_\mathrm{P} = (8\pi G_{\mathrm{Newton}})^{-\frac{1}{2}} = \unit{2.4\cdot 10^{18}}{\giga\electronvolt}$, where effects of gravity become important at the quantum level. Therefore, the loop corrections are of enormous magnitude and have to precisely cancel the bare Higgs boson mass to achieve an observable Higgs boson mass at the electroweak breaking scale. This required fine-tuning is known as the  $\textit{Hierachy problem}$ and is considered to be unnatural and motivates the presence of new physics at the TeV scale.
+where $\Lambda_{UV}$ represents the energy scale up to which the SM is valid as an effective theory, i.e. the scale at which new physics will be appear. This can be as large as the reduced Planck scale $M_\mathrm{P} = (8\pi G_{\mathrm{Newton}})^{-\frac{1}{2}} = \unit{2.4\cdot 10^{18}}{\giga\electronvolt}$, where effects of gravity become important at the quantum level. Therefore, the loop corrections are of enormous magnitude and have to precisely cancel the bare Higgs boson mass to achieve an observable Higgs boson mass at the electroweak breaking scale. This required fine-tuning is known as the  $\textit{Hierarchy problem}$ and is considered to be unnatural and motivates the presence of new physics at the TeV scale.
 
 \subsubsection*{Astrophysical Observations}
-Astrophysical observation have been suggesting the presence of non-visible forms of matter, for example from the motion of galaxy clusters or galaxy rotation curves. The most precise measurements of the energy content of the universe come from observations of the cosmic microwave background~\cite{Adam:2015rua}. The contribution of ordinary matter is only about 4.9\%, while an unidentified dark matter, interacting only gravitational and possibly weakly, accounts for about 25.9\% (the remaining 69.2\% are attributed to dark energy). The SM does not provide any candidate for a dark matter particle, because neutrinos are disfavoured by structure formation in the early universe~\cite{PDG}. Possible candidates are so far undiscovered weakly interacting massive particles with masses of the order $\mathcal{O}(\unit{100}{\giga\electronvolt}$), which require an extension of the SM. 
+Astrophysical observations have been suggesting the presence of non-visible forms of matter, for example from the motion of galaxy clusters or galaxy rotation curves. The most precise measurements of the energy content of the universe come from observations of the cosmic microwave background~\cite{Adam:2015rua}. The contribution of ordinary matter is only about 4.9\%, while an unidentified dark matter, interacting only gravitational and possibly weakly, accounts for about 25.9\% (the remaining 69.2\% are attributed to dark energy). The SM provides only neutrinos as candidates for dark matter particles. However, structure formation in the early universe excludes that they constitute a dominant portion of all dark matter~\cite{PDG}. Possible alternative candidates are so far undiscovered weakly interacting massive particles with masses of the order $\mathcal{O}(\unit{100}{\giga\electronvolt}$), which require an extension of the SM. 
 
 \subsection*{Unification of forces}
-In the past, the increasingly deeper insights into the workings of nature have often allowed to find unified theoretical frameworks to describe different physical phenomena, for example the unification of the electric and magnetic forces into electromagnetism or its further unification with the weak force into the electroweak theory discussed above. Therefore, a further unification with the strong force into a grand unified theory (GUT) at higher energy scales is hoped for. However, as shown by the dashed lines in Figure~\ref{fit:unification}, the running couplings of the three forces do not meet at any energy scale in the SM, excluding a unification inside the existing theoretical framework. As already indicated in the Figure, this could be accomplished by extension of the SM such as Supersymmetry, where the introduction of new particles at the TeV scale changes the running of the couplings.
+In the past, the increasingly deeper insights into the workings of nature have often allowed to find unified theoretical frameworks to describe different physical phenomena, for example the unification of the electric and magnetic forces into electromagnetism or its further unification with the weak force into the electroweak theory discussed above. Therefore, a further unification with the strong force into a grand unified theory (GUT) at higher energy scales is hoped for. However, as shown by the dashed lines in Figure~\ref{fit:unification}, the running couplings of the three forces do not meet at any energy scale in the SM, excluding a unification inside the existing theoretical framework. As already indicated in the Figure, this could be accomplished by extensions of the SM such as Supersymmetry, where the introduction of new particles at the TeV scale changes the running of the couplings.
 \begin{figure}
 \centering
 \includegraphics[scale=0.35]{plots/THEO/unification.png}
-\caption{Running of the coupling $\alpha$ of the electromagnetic, weak and strong force in the SM (dashed lines) and Supersymmetry (red and blue lines)\cite{Martin:1997ns} with the energy scale Q.}
+\caption{Running of the couplings $\alpha$ of the electroweak and strong forces in the SM (dashed lines) and in Supersymmetry (red and blue lines) with the energy scale Q~\cite{Martin:1997ns}.}
 \label{fit:unification}
 \end{figure}
 \section{Supersymmetry}
-Of the many proposed extensions of the SM, Supersymmetry (SUSY)~\cite{Wess197439} has been considered to be the most attractive in the last decades. It postulates the existence of a fermion partner to every SM boson and vice versa. This promises a solution to the naturalness problem of the Higgs boson mass and might also lead to a unification of forces and in certain models offer candidates for the dark matter particle. In the following a short description of the theoretical framework, based on~\cite{Martin:1997ns}, is given before the phenomenological consequences and the experimental signatures relevant to this analysis are discussed.
+Of the many proposed extensions of the SM, Supersymmetry (SUSY)~\cite{Wess197439} has been considered to be the most attractive in the last decades. It postulates the existence of a fermion partner to every SM boson and vice versa. This promises a solution to the Hierarchy problem of the Higgs boson mass. It might also lead to a unification of forces, and in certain models it offers candidates for dark matter particles. In the following a short description of the theoretical framework, based on~\cite{Martin:1997ns}, is given before the phenomenological consequences and the experimental signatures relevant to this analysis are discussed.
 \subsection{Theoretical foundation}
 Supersymmetry introduces a symmetry between bosons and fermions. In the minimal supersymmetric extension of the SM (MSSM), one $\textit{superpartner}$ is assigned to each SM particle which has the same quantum numbers except for the spin, which differs by $\frac{1}{2}$. The designated names of the new supersymmetric particles ($\textit{sparticles}$) are derived by adding the prefix $\textit{s-}$ to all fermion partners and the postfix $\textit{-ino}$ to all boson partners. The same scheme holds also for categories of particles, so that $\textit{sleptons}$ and $\textit{squarks}$ are the partners of leptons and quarks and make up the $\textit{sfermions}$ while the $\textit{gauginos}$ are the partners of the gauge bosons. 
 
 The SM Higgs sector has to be extended to two complex scalar doublets to give masses to the particles
 \begin{eqnarray}
-\HH_1 = \colvec{2}{\HH_1^0}{\HH_1^-}, & &  \HH_2 = \colvec{2}{\HH_2^0}{\HH_1^+}.
+\HH_1 = \colvec{2}{\HH_1^0}{\HH_1^-}, & &  \HH_2 = \colvec{2}{\HH_2^0}{\HH_2^+}.
 \end{eqnarray}
-Here, $\HH_1$ gives mass to down-type quarks and leptons while $\HH_2$ gives mass to up-type quarks. To these four Higgs states $\textit{higgsinos}$ are introduced as superpartners. In the spontaneous symmetry breaking eight degrees of freedom appear instead of four because of the second doublet. Three are used to give mass to the \W and \Z bosons, leaving five massive bosons. Therefore, SUSY results in an extended Higgs sector with two neutral scalars, $\mathrm{h}^0$ and $\HH^0$, one neutral pseudoscalar $\mathrm{A}^0$, and two charged scalars $\HH^{\pm}$. The observed Higgs boson can be identified with one of the two scalars, of which, by convention, $\mathrm{h}^0$ is the lighter one. 
+Here, $\HH_1$ gives mass to down-type quarks and leptons while $\HH_2$ gives mass to up-type quarks. To these four scalar Higgs states spin-$\frac{1}{2}$ $\textit{higgsinos}$ are introduced as superpartners. In the spontaneous symmetry breaking eight degrees of freedom appear instead of four in the SM because of the second doublet. Three are used to give mass to the \W and \Z bosons, leaving five massive bosons. Therefore, SUSY results in an extended Higgs sector with two neutral scalars, $\mathrm{h}^0$ and $\HH^0$, one neutral pseudoscalar $\mathrm{A}^0$, and two charged scalars $\HH^{\pm}$. The observed Higgs boson can be identified with one of the two scalars, of which, by convention, $\mathrm{h}^0$ is the lighter one. 
 
 The higgsinos and gauginos mix to eight mass eigenstates, the charginos $\tilde{\chi}^{\pm}_1$ and $\tilde{\chi}^{\pm}_2$ and the neutralinos $\tilde{\chi}^0_1$, $\tilde{\chi}^0_2$, $\tilde{\chi}^0_3$, and $\tilde{\chi}^0_4$. They are numbered in increasing mass. The additional particle content introduced in the MSSM is summarised in Table~\ref{tab:MSSM}.
 
@@ -94,16 +94,16 @@ charginos & $\tilde{\W}^+$, $\tilde{\W}^-$, $\tilde{\HH}_1^-$, $\tilde{\HH}_2^+$
 
 If such a model would be realised it would solve the hierachy problem because the contributions of the superpartners to the quantum loop corrections to the Higgs boson mass have opposite sign than those of the SM particles, cancelling the quadratic dependency on the cut-off parameter $\Lambda_{UV}$. However, as no superpartners have been discovered so far, SUSY must be a broken symmetry and the sparticles can not have the same mass as the corresponding SM particles but must be heavier. Therefore, the cancellation of contributions to the Higgs boson mass becomes imperfect, leaving a logarithmic dependency to the cut-off scale. To prevent the need for fine-tuning, sparticle masses are expected to be at the $\mathrm{TeV}$ scale. Especially the top squark mass has to be small, as the top quark is the SM particle with the largest Yukawa coupling and contributes dominantly to the loop corrections. 
 
-SUSY introduces lepton- and baryon number violating couplings, which can allow for rapid proton decay, in contradiction to its extremely long lifetime. One way to keep the proton stable, is to assume that the quantum number R-parity
+SUSY introduces lepton- and baryon number violating couplings, which can allow for rapid proton decay, in contradiction to the observed extremely long lifetime. One way to keep the proton stable, is to assume that the quantum number R-parity
 \begin{equation}
 R_P = (-1)^{3(B-L)+2s},
 \end{equation} 
-with B, L and s being the baryon number, lepton number and spin of the particle, is conserved. It is +1 for all SM particles and -1 for all SUSY particles. If R-parity is conserved, SUSY particles can only produced in even number and the lightest supersymmetric particle (LSP) must be stable. In many SUSY models the LSP is the lightest neutralino $\tilde{\chi}^0_1$, providing a possible dark matter candidate. 
+with $B$, $L$ and $s$ being the baryon number, lepton number and spin of the particle, is conserved. It is +1 for all SM particles and -1 for all SUSY particles. If R-parity is conserved, SUSY particles can only produced in even number and the lightest supersymmetric particle (LSP) must be stable. In many SUSY models the LSP is the lightest neutralino $\tilde{\chi}^0_1$, providing a possible dark matter candidate. 
 
 
 \subsection{Dilepton mass edges in Supersymmetry}
 \label{sec:edges}
-The multitude of superpartners offer a rich variety of experimental signatures to be observed at hadron colliders such as the LHC. The discussion here focusses on R-parity conserving models. In Figure~\ref{fig:SUSYXSecs}, the pair production cross section for different combinations of SUSY particles in proton-proton collision at a centre-of-mass energy of $\unit{\sqrt{s}=8}{\tera\electronvolt}$ is shown. It can be seen that the production of squarks and/or gluinos via the strong force is the dominant production mode. It therefore seems natural to focus on these events in the search for SUSY.
+The multitude of superpartners offers a rich variety of experimental signatures to be observed at hadron colliders such as the LHC. The discussion here focusses on R-parity conserving models. In Figure~\ref{fig:SUSYXSecs}, the pair production cross section for different combinations of SUSY particles in proton-proton collision at a centre-of-mass energy of $\unit{\sqrt{s}=8}{\tera\electronvolt}$ is shown. It can be seen that the production of squarks and/or gluinos via the strong force is the dominant production mode. It therefore seems natural to focus on these events in the search for SUSY.
 \begin{figure}
 \centering
 \includegraphics[scale=0.6]{plots/THEO/prospino_lhc8.eps}
@@ -113,7 +113,7 @@ The multitude of superpartners offer a rich variety of experimental signatures t
 
 The experimental signature of SUSY are cascades of decays of the initially produced sparticles into the LSP under emission of several SM particles. In the case of the production of squarks and gluinos via the strong interaction, at least two quarks or gluons are produced in the first decays of the two decay chains in the events. These will hadronise into jets. Often even more jets are produced in the decay chains, making high jet multiplicities and large amounts of hadronic energy typical signatures of SUSY. In the models considered here, the LSP is stable and will leave the detector undetected, resulting in \MET (see Section~\ref{sec:variables}).
 
-As leptons are easy to identify and can be measured precisely, requiring the presence of leptons in the events helps to suppress backgrounds from SM processes such as QCD multijet production. Of particular interest to this analysis are SUSY cascades which contain the correlated production of lepton pairs of the same flavour but opposite electric charge. Due to their more challenging experimental signature, $\tau$ leptons are not considered. The relevant decay is that of a next-to-lightest neutralino into the lightest neutralino and two leptons $\secondchi \rightarrow \firstchi \ell^+\ell^-$, which can occur either via an intermediate slepton or an off- or on-shell \Z boson:
+As leptons are easy to identify and can be measured precisely, requiring the presence of leptons in the events helps to suppress backgrounds from SM processes such as QCD multijet production. Of particular interest to this analysis are SUSY cascades which contain the correlated production of lepton pairs of the same flavour but opposite electric charge. Due to their more challenging experimental signature, $\tau$ leptons are not considered in this analysis. They have, however, been studied on an earlier dataset by Matthias Edelhoff in his doctoral thesis~\cite{Edelhoff:445011}. The relevant decay is that of a next-to-lightest neutralino into the lightest neutralino and two leptons $\secondchi \rightarrow \firstchi \ell^+\ell^-$, which can occur either via an intermediate slepton or an off- or on-shell \Z boson:
 \begin{align}
 \secondchi &\rightarrow \tilde{\ell}^{\pm}\ell^{\mp} \rightarrow \ell^{\pm}\ell^{\mp}\firstchi,\label{eq:slepton}\\ 
 \secondchi &\rightarrow \mathrm{Z}^{(*)}\firstchi \rightarrow \ell^+\ell^-\firstchi.\label{eq:Z}
@@ -131,15 +131,15 @@ The decays are illustrated in Figure~\ref{fig:edgeFeyn}, where the left graph co
 \label{fig:edgeFeyn}
 \end{figure}
 
-The mass difference between the two neutralinos sets an upper bound on the invariant mass of the dilepton system \mll and its distribution exhibits an characteristic edge structure. The endpoint of this edge is defined by the signal kinematics.  If the \secondchi decays via an off-shell \Z boson, it is simply given by the mass difference itself:
+The mass difference between the two neutralinos sets an upper bound on the invariant mass of the dilepton system \mll and its distribution therefore exhibits a characteristic edge structure. The endpoint of this edge is defined by the signal kinematics.  If the \secondchi decays via an off-shell \Z boson, it is simply given by the mass difference itself:
 \begin{equation}
 \mlledge = m_{\secondchi} - m_{\firstchi}.
 \end{equation}
 If the decay is mediated by a slepton, the edge position is modified by the slepton mass $m_{\tilde{\ell}}$:
 \begin{equation}
-\mlledge = \sqrt{\frac{(m_{\secondchi}^2-m_{\tilde{\ell}}^2)(m_{\tilde{\ell}}^2-m_{\firstchi}^2)}{m_{\tilde{\ell}}^2}}. 
+\mlledge = \sqrt{\frac{(m_{\secondchi}^2-m_{\tilde{\ell}}^2)(m_{\tilde{\ell}}^2-m_{\firstchi}^2)}{m_{\tilde{\ell}}^2}}~\cite{PhysRevD.55.5520}. 
 \end{equation}
-For decays via an on-shell \Z boson, \mll will be consistent with the \Z boson mass and no edge structure is present. The exact shape of the distribution is also determined by the decays. If the decays are mediated by \Z bosons, it will be peaked towards $m_{\Z}$ if \mlledge is below the \Z boson mass. For \mlledge on and above $m_{\Z}$, the decays via an on-shell \Z boson dominate and there is no edge. Decays via an intermediate slepton lead to triangular edge shapes, but the actual shape depends on model parameters, as for example negative interference between the decay channels via slepton and \Z boson can occur. Examples are given in the next section.
+For decays via an on-shell \Z boson, \mll will be consistent with the \Z boson mass and no edge structure is present. The exact shape of the distribution is also determined by the decays. If the decays are mediated by \Z bosons, it will be peaked towards $m_{\Z}$ if \mlledge is below the \Z boson mass. For \mlledge on and above $m_{\Z}$, the decays via an on-shell \Z boson dominate and there is no edge. Decays via an intermediate slepton lead to triangular edge shapes, but the actual shape depends on model parameters, as for example negative interference between the decay channels via slepton and \Z boson can occur~\cite{Nojiri:1999ki}. Examples are given in the next section.
 \subsubsection{Simplified models}
 \label{sec:models}
 As benchmark scenarios for these signatures, two ``simplified models'' are used that have been developed for this purpose by Christian Schomakers in the context of his master thesis~\cite{Schomakers:2014zza}. In this kind of models, only the subset of sparticles relevant to the studied signature is assumed to be accessible at LHC energies. Also, the branching fractions of the sparticle decays are chosen to produce the desired signature and are often set to 100\%.  
@@ -158,26 +158,31 @@ Both models consider the pair production of bottom squarks. They decay into a bo
 \label{fig:sigFeyn}
 \end{figure}
 
- In the ``fixed-edge'' model, it decays into an off-shell \Z boson and a \firstchi in 100\% of the cases. The \Z boson decays with its SM branching ratios, producing light leptons in about 7\% of the cases. The $m_{\sbottom}$-$m_{\secondchi}$-plane is scanned, varying the masses of the two particles in steps of 25\GeV. The mass of the \firstchi is fixed to 70\GeV below the mass of the \secondchi to produce an edge in the \mll spectrum at this value.
+In the ``fixed-edge'' model, the \secondchi decays into an off-shell \Z boson and a \firstchi in 100\% of the cases. The \Z boson decays with its SM branching ratios, producing light leptons in about 7\% of the cases. The $m_{\sbottom}$-$m_{\secondchi}$-plane is scanned, varying the masses of the two particles in steps of 25\GeV. The mass of the \firstchi is fixed to 70\GeV below the mass of the \secondchi to produce an edge in the \mll spectrum at this value.
 
-As a mass difference between the two neutralinos larger than the \Z boson mass will only result in the production of on-shell \Z bosons in this model, the ``slepton-edge'' model introduces selectrons and smuons as additional new particles. The masses of these sleptons are assumed to be degenerate and set to lie halfway between the two neutralinos: $m_{\slepton} = m_{\firstchi} + 0.5(m_{\secondchi}-m_{\firstchi})$. The branching fractions of the \secondchi are chosen such that the decay in an off- or on-shell \Z boson or a slepton and a lepton occur with 50\% probability each. The \Z boson again decays according to its SM branching fraction, while the slepton always decays into a lepton and the \firstchi. The $m_{\sbottom}$-$m_{\secondchi}$-plane is scanned in steps of 25\GeV, while the $m_{\firstchi}$ is set to be 100\GeV, allowing for edges in the \mll spectrum also above the \Z boson mass. 
-The signal simulation is normalised to theory cross sections calculated at next-to-leading order (NLO) in $\alpha_s$, including the leading logarithmic contributions of the next-to-next-to-leading order (NNLO)~\cite{bib-nlo-nll-01,bib-nlo-nll-02,bib-nlo-nll-03,bib-nlo-nll-04,bib-nlo-nll-05,ref:xsec}.
+As a mass difference between the two neutralinos larger than the \Z boson mass will only result in the production of on-shell \Z bosons in this model, the ``slepton-edge'' model introduces selectrons and smuons as additional new particles. The masses of these sleptons are assumed to be degenerate and set to lie halfway between the two neutralinos: $m_{\slepton} = m_{\firstchi} + 0.5(m_{\secondchi}-m_{\firstchi})$. The branching fractions of the \secondchi are chosen such that the decay to an off- or on-shell \Z boson, or a slepton and a lepton occur with 50\% probability each. The \Z boson again decays according to its SM branching fraction, while the slepton always decays into a lepton and the \firstchi. The $m_{\sbottom}$-$m_{\secondchi}$-plane is scanned in steps of 25\GeV, while the $m_{\firstchi}$ is set to be 100\GeV, allowing for edges in the \mll spectrum also above the \Z boson mass. 
+The signal simulation is normalised to theory cross sections calculated with \verb+NLL-fast+ at next-to-leading order (NLO) in $\alpha_s$, including the leading logarithmic contributions of the next-to-next-to-leading order (NNLO)~\cite{bib-nlo-nll-01,bib-nlo-nll-02,bib-nlo-nll-03,bib-nlo-nll-04,bib-nlo-nll-05,ref:xsec}.
 
-Figure~\ref{fig:SUSYMasses} illustrates the \mll distributions for three example points. The two examples from the slepton-edge model are roughly triangular in shape, while the one from the fixed-edge model is peaked towards $m_{\Z}$ as in this model the decay is mediated by an off-shell \Z boson. Contributions outside of the edges are caused by events with more than two leptons where the wrong combination has been chosen. In addition to the generated distributions the ones reconstructed after a simulation of the CMS detector are shown, illustrating the good detector resolution for lepton pairs.
+The left side of Figure~\ref{fig:SUSYMasses} illustrates the \mll distributions for three example points. The two examples from the slepton-edge model are roughly triangular in shape, while the one from the fixed-edge model is peaked towards $m_{\Z}$ as in this model the decay is mediated by an off-shell \Z boson. Contributions outside of the edges are caused by events with more than two leptons where the wrong combination has been chosen. On the right side of the Figure, the generated distributions are compared to the ones reconstructed after a simulation of the CMS detector (see Section~\ref{sec:MCGen}). Here only lepton pairs successfully selected inside the geometric and kinematic acceptance of this analysis (see Section~\ref{sec:inclusiveSelection}) after simulation and reconstruction are considered. The good agreement between the generated and reconstructed distributions in each case illustrates the good detector resolution for lepton pairs. Comparing the left and right sides of Figure~\ref{fig:SUSYMasses}, it can be seen that after selecting reconstructed lepton pairs the distributions contain less events at low \mll, caused by limited acceptance for low \pt leptons. 
 \begin{figure}
 \centering
+\begin{minipage}[t]{0.49\textwidth}
+\includegraphics[scale=0.3]{plots/THEO/SUSY_masses_Raw.pdf}
+\end{minipage}
+\begin{minipage}[t]{0.49\textwidth}
 \includegraphics[scale=0.3]{plots/THEO/SUSY_masses.pdf}
-\caption{Distribution of \mll for one signal point of the fixed-edge model and two of the slepton-edge model, illustrating different edge positions and shapes. The masses given are those of the \sbottom and \secondchi, respectively. Shown are the generated distributions as solid lines and the reconstructed ones as dashed lines.}
+\end{minipage}
+\caption{Distribution of \mll for one signal point of the fixed-edge model and two of the slepton-edge model, illustrating different edge positions and shapes. The masses given are those of the \sbottom and \secondchi, respectively. Shown are the generated distributions on the left side and a comparison of generated and reconstructed distributions distributions for events selected after a simulation of the CMS detector on the right side. In the latter case, the generated distributions are shown as solid lines and the reconstructed ones as dashed lines.}
 \label{fig:SUSYMasses}
 \end{figure}
 
-\section{Standard Model processes}
+\section{Standard Model background processes}
 \label{sec:SMBackgrounds}
 The signature of jets, \MET and a pair of same-flavour opposite-sign leptons is not unique to the signal. Several SM processes can behave similarly and constitute backgrounds in this analysis. They can be categorised by the nature of their dilepton production. 
 
-A process exhibiting the correlated production of leptons similar to the signal is for example the Drell--Yan process $pp \rightarrow \Z/\gamma^{*}\rightarrow \ell\ell$. In this process, jets are commonly produced as initial state radiation off the incoming partons. Even though no invisible particles are produced in this process, requiring the \MET to be caused by mismeasurements, the large production cross section of this process leads to significant number of events with large \MET. Other processes with correlated production relevant to this analysis are the production of \Z bosons in association with other gauge bosons ($\mathrm{WZ}$, $\mathrm{ZZ}$) or top quark pair production ($t\bar{t}$\Z). All these processes will be summarised as ``Drell--Yan'' in the following for simplicity. 
+A process exhibiting the correlated production of leptons similar to the signal is for example the Drell--Yan process $pp \rightarrow \Z/\gamma^{*}\rightarrow \ell\ell$. In this process, jets are commonly produced as initial state radiation off the incoming partons. Even though no invisible particles are produced in this process, requiring the \MET to be caused by mismeasurements, the large production cross section of this process leads to a significant number of events with large \MET. Other processes with correlated production relevant to this analysis are the production of \Z bosons in association with other gauge bosons ($\mathrm{WZ}$, $\mathrm{ZZ}$) or top quark pair production ($t\bar{t}$\Z). All these processes will be summarised as ``Drell--Yan'' in the following for simplicity. 
 
-The other class of backgrounds exhibits uncorrelated production of leptons. The dominant contribution to this analysis comes from the dileptonic decay of top quark pair production $pp\rightarrow t\bar{t} \rightarrow \W b \W b\rightarrow \ell b\nu \ell b \nu$. This includes decays via intermediate $\tau$ leptons $\text{W}\rightarrow \tau \nu \rightarrow \ell \nu \nu \nu$. The leptons have opposite sign, but can be of same or opposite flavour with the same probability. This is also the case for the production of single top quarks in association with a W boson or in the case of $\tau$ leptons in the decay $\Z \rightarrow \tau\tau \rightarrow \ell\nu\nu\ell\nu\nu$. These backgrounds are called ``flavour-symmetric'' throughout this analysis. They also include contributions from leptons not originating from the hard interaction. These ``non-prompt'' leptons include leptons from the decay of charm or bottom (summarised as ``heavy flavour'') quarks inside hadronic jets or jets misidentified as leptons.
+The other class of backgrounds exhibits uncorrelated production of leptons. The dominant contribution to the SM background in this analysis comes from the dileptonic decay of top quark pair production $pp\rightarrow t\bar{t} \rightarrow \W b \W b\rightarrow \ell b\nu \ell b \nu$. This includes decays via intermediate $\tau$ leptons $\W\rightarrow \tau \nu \rightarrow \ell \nu \nu \nu$. The leptons have opposite sign, but can be of same or opposite flavour with the same probability. This is also the case for the production of single top quarks in association with a W boson or in the case of $\tau$ leptons in the decay $\Z \rightarrow \tau\tau \rightarrow \ell\nu\nu\ell\nu\nu$. These backgrounds are called ``flavour-symmetric'' throughout this analysis. They also include contributions from leptons not originating from the hard interaction. These ``non-prompt'' leptons include leptons from the decay of charm or bottom (summarised as ``heavy flavour'') quarks inside hadronic jets or jets misidentified as leptons.
 
 The production cross sections for different processes as a function of the centre-of-mass energy of the collisions are shown in Figure~\ref{fig:xsecs} in $\mathrm{nb}$. The total interaction cross section is in the order of $\unit{10^{8}}{\nano\barn}$. It is dominated by soft QCD processes which are of minor importance to this analysis. However, given the high instantaneous luminosity achieved at the LHC (see Section~\ref{sec:LHC}), many interactions occur in each collision. This leads to additional particles in the detector on top of the signature of the relevant physics process, an effect called ``pileup''.
 
