--- a/thesis.tex
+++ b/thesis.tex
@@ -251,13 +251,13 @@
 
 
 %Titelseite
-\input{title}
+\input{title_preliminary}
 \pagenumbering{roman}
 
-%\addsec{Zusammenfassung}
-%\input{Zusammenfassung}
-%\addsec{Abstract}
-%\input{Abstract}
+\addsec{Zusammenfassung}
+\input{zusammenfassung}
+\addsec{Abstract}
+\input{abstract}
 
 %Inhalt
 \tableofcontents
@@ -310,7 +310,7 @@
 \bibliographystyle{lucas_unsrt}
 \bibliography{thesis.bib}
 %\input{Literature}
-
+\input{acknowledgement}
 %\input{Erklärung}
 %\input{Danksagung}
 
