--- a/background.tex
+++ b/background.tex
@@ -1,14 +1,14 @@
 \label{sec:backgrounds}
-As indicated in Figure~\ref{fig:sigRegionBG}, different SM processes contribute to the event sample in the signal region. To distinguish a potential signal from these backgrounds, a precise estimation of the background contributions is essential. While the simulation of these processes and the response of the CMS detector gives a good description of the data for the majority of the phase space, a large number of uncertainty sources are introduced in the modelling of the physical processes and the detector. Therefore, a higher precision can be achieved by deriving the background estimates directly from the recorded data. Dedicated methods are applied for the flavour-symmetric and Drell--Yan backgrounds (see Section~\ref{sec:SMBackgrounds}). The results of these methods are used directly in the counting experiment (see Section~\ref{sec:counting}). The fit in search for a kinematic edge performs shape based estimates of the SM backgrounds. However, the results of the studies of flavour-symmetry described below are used to constrain these backgrounds in the fit procedure.
+Different SM processes contribute to the event sample in the signal region, as indicated for example in Figure~\ref{fig:sigRegionBG}. To distinguish a potential signal from these backgrounds, a precise estimation of the background contributions is essential. While the simulation of these processes and the response of the CMS detector gives a good description of the data for the majority of the phase space, a large number of uncertainty sources are introduced in the modelling of the physical processes and the detector. Therefore, a higher precision can be achieved by deriving the background estimates directly from the recorded data. Dedicated methods are applied for the flavour-symmetric and Drell--Yan backgrounds (see Section~\ref{sec:SMBackgrounds}). The results of these methods are used directly in the counting experiment (see Section~\ref{sec:counting}). The fit in search for a kinematic edge performs shape based estimates of the SM backgrounds. However, the results of the studies of flavour-symmetry described below are used to constrain these backgrounds in the fit procedure.
 
 \section{Flavour-symmetric backgrounds}
 Processes that are symmetric in the production of SF and OF lepton pairs allow for the estimation of their contribution to the SF event sample from the OF yield. The relevant backgrounds contributing to this class have been discussed in Section~\ref{sec:SMBackgrounds}. Additional contributions are coming from misidentified leptons, as will be demonstrated later. 
 
 No significant deviation from flavour-symmetry has been observed in the decays of the \W boson, with a measured ratio of the branching fractions into $e+\nu$ and $\mu + \nu$ of $\frac{BF(\W\rightarrow e\nu)}{BF(\W\rightarrow \mu\nu)} = 1.007\pm0.021$~\cite{PDG}. In the decays of the $\tau$ lepton the different masses of electron and muon have a small, but noticeable effect, resulting in a slightly favoured decay into electrons with ratio of branching fractions of  $\frac{BF(\tau\rightarrow e\nu)}{BF(\tau\rightarrow \mu\nu)} = 1.0241\pm0.0032$~\cite{PDG}. As backgrounds with $\tau$ leptons are a sub-dominant contribution to the flavour-symmetric background, these can be considered to be fully flavour-symmetric on particle level. 
 
-However, deviations from flavour-symmetry are introduced by the different efficiencies for triggering, reconstructing, and identifying electrons and muons in CMS. The background estimation from OF events, therefore, has to include a correction for this deviation, which is applied as a multiplicative factor:
+However, deviations from flavour-symmetry are introduced by the different efficiencies for triggering, reconstructing, and identifying electrons and muons in CMS. The background estimation from OF events $N_{SF}^{pred}$, therefore, has to include a correction for this deviation, which is applied as a multiplicative factor to the observed OF event yield $N_{OF}$:
 \begin{equation*}
-N_{SF}^{pred} = \Rsfof \cdot N_{OF}.
+N_{SF}^{\text{pred}} = \Rsfof \cdot N_{OF}.
 \end{equation*}
 Similarly, the factors \Reeof and \Rmmof are used to derive separate background estimates for the \EE and \MM channels. Two independent methods are utilised to measure \Rsfof on data. In the first approach the ratio is directly measured as the ratio of SF to OF events in the control region for flavour-symmetric backgrounds (see Table~\ref{tab:selections}). The second approach studies the lepton efficiencies and derives \Rsfof factorised into the effects of trigger efficiencies and reconstruction and identification efficiencies. 
 
@@ -18,7 +18,7 @@ The ratio \Rsfof is calculated in the control region for flavour-symmetric backg
 \begin{center}
 \includegraphics[scale=0.5]{plots/BG/control/rSFOF_ControlCentral_Full2012_Mll_None_MC.pdf}\\
 \includegraphics[scale=0.5]{plots/BG/control/rSFOF_ControlForward_Full2012_Mll_None_MC.pdf}
-\caption{Ratio of SF to OF events as a function of \mll in the $t\bar{t}$ control region in simulation. All contributing background processes have been considered. Shown are the results for the central (top) and forward (bottom) lepton selection. The black vertical lines indicate the upper boundary of the low-mass region and the lower boundary of the high-mass region.}
+\caption{Ratio of SF to OF events as a function of \mll in the flavour-symmetric control region in simulation. All contributing background processes have been considered. Shown are the results for the central (top) and forward (bottom) lepton selection. The black vertical lines indicate the upper boundary of the low-mass region and the lower boundary of the high-mass region.}
 \label{fig:controlRatioMC}
 \end{center}
 \end{figure}
@@ -28,52 +28,55 @@ The observed ratio in data as a functions of \mll is shown in Figure~\ref{fig:co
 \begin{center}
 \includegraphics[scale=0.5]{plots/BG/control/rSFOF_ControlCentral_Full2012_Mll_None.pdf}\\
 \includegraphics[scale=0.5]{plots/BG/control/rSFOF_ControlForward_Full2012_Mll_None.pdf}
-\caption{Ratio of SF to OF events as a function of \mll in the $t\bar{t}$ control region in data. Shown are the results for the central (top) and forward (bottom) lepton selection. The black vertical lines indicate the upper boundary of the low-mass region and the lower boundary of the high-mass region.}
+\caption{Ratio of SF to OF events as a function of \mll in the flavour-symmetric control region in data. Shown are the results for the central (top) and forward (bottom) lepton selection. The black vertical lines indicate the upper boundary of the low-mass region and the lower boundary of the high-mass region.}
 \label{fig:controlRatio}
 \end{center}
 \end{figure}
-The numerical results are summarised in Table~\ref{tab:rSFOF} for \Rsfof as well as \Reeof and \Rmmof. Agreement between the values measured in data and simulation is observed within the statistical uncertainties. The observed values in data are $\Rsfof = 1.007\pm0.037$ for the central and $1.015\pm0.062$ for the forward dilepton selection. 
+The numerical results are summarised in Table~\ref{tab:rSFOF} for \Rsfof as well as for \Reeof and \Rmmof. Agreement between the values measured in data and simulation is observed within the statistical uncertainties. The observed values in data are $\Rsfof = 1.007\pm0.037$ for the central and $1.015\pm0.062$ for the forward dilepton selection. 
 
-The extrapolation of the measured value of \Rsfof into the signal region is tested in simulation by calculating the ratio of \Rsfof observed in the signal region to that in the control region. No deviation of the values measured in the signal region from those obtained in the control region is observed within the statistical uncertainties of the simulation. This uncertainty of 0.020 for the central and 0.034 for the forward dilepton selection is therefore assigned as a systematic uncertainty of the method. 
+The extrapolation of the measured value of \Rsfof into the signal region is tested in simulation by calculating the ratio of \Rsfof observed in the signal region to that in the control region. No deviation of the values measured in the signal region from those obtained in the control region is observed within the statistical uncertainties of the simulation. This statistical uncertainty of 0.020 for the central and 0.034 for the forward dilepton selection is therefore assigned as a systematic uncertainty of the method. 
 
 \input{tab/table_Rsfof_full.tex}
 
 \subsection{Determination of \Rsfof with the factorisation method}
 \label{sec:rmue}
-Asymmetries between the lepton flavours introduced by differing reconstruction and selection efficiencies can be corrected for if the ratio of efficiencies for muons and electrons $\rmuestar = \frac{\epsilon_{\mu}}{\epsilon_{e}}$ is known. Here and in the following, the ``$^{*}$'' indicates quantities that do not consider the effect of trigger efficiencies. They have, therefore, to be expressed in terms of the measurable event yields which include these effects. Under the assumption that the efficiencies for the two leptons in the event have negligible correlation and the dilepton efficiency factorises, i.e. $\epsilon_{\ell\ell} = \epsilon_{\ell}\cdot\epsilon_{\ell}$, the number of dielectron and dimuon events can be expressed in terms of the opposite-flavour yield using the relations
+Asymmetries between the lepton flavours introduced by differing reconstruction and selection efficiencies can be corrected for if the ratio of efficiencies for muons and electrons $\rmuestar = \frac{\epsilon_{\mu}}{\epsilon_{e}}$ is known. Here and in the following, the ``$^{*}$'' indicates that only reconstruction and selection efficiencies are considered in this definition. As all measurable quantities are affected by trigger efficiencies, these have to taken into account separately. The observable yield of OF events is therefore expressed as 
 \begin{equation*}
-N_{ee}^{*} = \frac{1}{2}\cdot \frac{N_{OF}^{*}}{\rmuestar}
+N_{OF} = \epsilon_{e\mu}^T N_{OF}^{*},
 \end{equation*}
-and 
-\begin{equation*}
-N_{\mu\mu}^{*} = \frac{1}{2} \cdot \rmuestar \cdot N_{OF}^{*}.
-\end{equation*}
-The combined same-flavour yield is therefore given by
-\begin{equation*}
-N_{SF}^{*} = \frac{1}{2}\cdot \left( \rmuestar + \frac{1}{\rmuestar} \right) N_{OF}^{*}.
-\end{equation*}
-In practice, all measured quantities are affected by the efficiencies of the different dilepton triggers. The observable SF yield, taking the trigger efficiencies into account, is given by
-\begin{equation*}
-N_{SF} = \effeet \cdot N_{ee}^{*} + \effmmt \cdot N_{\mu\mu}^{*},
-\end{equation*}
-where $\epsilon_{\ell\ell}^T$ denotes the trigger efficiency for the given dilepton combination.\\
-The trigger efficiencies also affect the calculation of $N_{ee}^{*}$ and $N_{\mu\mu}^{*}$. To take this into account, \rmuestar is expressed in terms of the measured value \rmue, which is derived from the \EE and \MM event yields in the Drell-Yan control region (see Section~\ref{sec:rmue}) as 
+where $\epsilon_{e\mu}^T$ is the efficiency of the $e\mu$ dilepton triggers. Similarly, \effeet and \effmmt denote the efficiencies of the dielectron and dimuon triggers.
+
+Under the assumption that the efficiencies for the two leptons in the event have negligible correlation and the dilepton efficiency factorises, i.e. $\epsilon_{\ell\ell} = \epsilon_{\ell}\cdot\epsilon_{\ell}$, \rmuestar can be expressed in terms of the measured value \rmue, which is derived from the \EE and \MM event yields in the Drell-Yan control region (see Section~\ref{sec:rmue}) as 
 \begin{equation*}
 \rmue  = \sqrt{\frac{N_{\mu\mu}}{N_{ee}}} \approx \sqrt{\frac{\epsilon_{\mu}^2 \effmmt}{\epsilon_{e}^2 \effeet}} = \rmuestar \cdot \sqrt{\frac{\effmmt}{\effeet}}.
 \end{equation*}
-Finally, the measured yield in the OF channel also includes the trigger efficiencies. Therefore, using $N_{OF} = \effemt \cdot N_{OF}^{*}$, the final expressions for the yields in the same-flavour channels become
+
+The predicted number of dielectron and dimuon events can be expressed in terms of the opposite-flavour yield using the relations
+\begin{equation*}
+\frac{1}{\epsilon_{ee}^T} N_{ee}^{\text{pred}} = \frac{1}{2}\cdot \frac{1}{\epsilon_{e\mu}^T} \frac{N_{OF}}{\rmuestar} = \frac{1}{2}\cdot \frac{1}{\rmue} \sqrt{\frac{\effmmt}{\effeet}} \frac{1}{\epsilon_{e\mu}^T} N_{OF}
+\end{equation*}
+and 
+\begin{equation*}
+\frac{1}{\epsilon_{\mu\mu}^T} N_{\mu\mu}^{\text{pred}} = \frac{1}{2} \cdot \rmuestar \frac{1}{\epsilon_{e\mu}^T} \cdot N_{OF} = \frac{1}{2} \cdot \rmue \sqrt{\frac{\effeet}{\effmmt}} \frac{1}{\effemt} \cdot N_{OF}.
+\end{equation*}
+The combined prediction for the same-flavour yield is therefore given by
+\begin{equation*}
+N_{SF}^{\text{pred}} = N_{ee}^{\text{pred}} + N_{\mu\mu}^{\text{pred}}.
+\end{equation*}
+
+In summary, the final expressions for the predicted yields in the same-flavour channels become
 \begin{equation}
-N_{ee} = \frac{1}{2\rmue} \cdot \frac{\sqrt{\effeet \effmmt}}{\effemt} N_{OF} = \Reeof N_{OF}
+N_{ee}^{\text{pred}} = \frac{1}{2\rmue} \cdot \frac{\sqrt{\effeet \effmmt}}{\effemt} N_{OF} = \Reeof N_{OF}
 \label{eq:nee}
 \end{equation} 
 and
 \begin{equation}
-N_{\mu\mu} = \frac{1}{2}\rmue  \cdot \frac{\sqrt{\effeet \effmmt}}{\effemt} N_{OF} = \Rmmof N_{OF}.
+N_{\mu\mu}^{\text{pred}} = \frac{1}{2}\rmue  \cdot \frac{\sqrt{\effeet \effmmt}}{\effemt} N_{OF} = \Rmmof N_{OF}.
 \label{eq:nmm}
 \end{equation} 
 The combined prediction of the SF yield is, therefore:
 \begin{equation}
-N_{SF} = \frac{1}{2}\left(\rmue + \frac{1}{\rmue}\right) \cdot \frac{\sqrt{\effeet \effmmt}}{\effemt}  N_{OF} = \Rsfof N_{OF}.
+N_{SF}^{\text{pred}} = \frac{1}{2}\left(\rmue + \frac{1}{\rmue}\right) \cdot \frac{\sqrt{\effeet \effmmt}}{\effemt}  N_{OF} = \Rsfof N_{OF}.
 \label{eq:nsf}
 \end{equation}
 The factor containing the trigger efficiencies is abbreviated as
@@ -82,7 +85,7 @@ R_{\mathrm{T}} = \frac{\sqrt{\effeet \effmmt}}{\effemt}.
 \label{eq:RT}
 \end{equation}
 \subsubsection{Measurement of $\mathbf{r_{\mu e}}$}
-The measurement of \rmue is performed in the Drell-Yan control region (see Table~\ref{tab:selections}) as the ratio of \MM to \EE events on the Z boson peak, requiring $\unit{60}{\giga\electronvolt} < \mll < \unit{120}{\giga\electronvolt}$. A comparison of the recorded data to the different contributions  from SM processes, estimated from simulation, is shown in Figure~\ref{fig:rmueMll}. The Drell-Yan process is the dominating source of events in this selection. Good agreement between data and simulation is observed, indicating a good understanding of this kinematic region by the CMS simulation. Towards higher masses the data is underestimated by the simulation because higher order effects are not included in the simulation and result in a lack of events in the simulated samples.  
+The measurement of \rmue is performed in the Drell-Yan control region (see Table~\ref{tab:selections}) as the ratio of \MM to \EE events on the Z boson peak, requiring $\unit{60}{\giga\electronvolt} < \mll < \unit{120}{\giga\electronvolt}$. A comparison of the recorded data to the different contributions  from SM processes, estimated from simulation, is shown in Figure~\ref{fig:rmueMll}. The Drell-Yan process is the dominating source of events in this selection. Good agreement between data and simulation is observed, indicating a good understanding of this kinematic region by the CMS simulation. Towards higher masses the data is underestimated by the simulation because mass-dependent higher order effects are not included in the simulation and result in a lack of events in the simulated samples.  
 \begin{figure}[htbp]
 \centering
 \begin{minipage}[t]{0.49\textwidth}
@@ -91,7 +94,7 @@ The measurement of \rmue is performed in the Drell-Yan control region (see Table
 \begin{minipage}[t]{0.49\textwidth}
 \includegraphics[width=\textwidth]{plots/BG/rmue/DrellYanControl_Mll_Full2012_EE_TopReweighted.pdf}
 \end{minipage}
-\caption{Distribution of \mll in the Drell-Yan control region for \MM events (left) and \EE events (right). The data is shown as the black dots, while the contributions from SM processes, estimated from simulation, are shown as the stacked histograms.}
+\caption{Distribution of \mll in the Drell-Yan control region for \MM events (left) and \EE events (right). The data is shown as the black dots, while the contributions from SM processes, estimated from simulation, are shown as the stacked histograms. The black lines indicate the region in \mll used in the measurement of \rmue.}
 \label{fig:rmueMll}
 \end{figure} 
 The results of the calculation of \rmue are shown in Table~\ref{tab:rMuE}. Given are the observed yields for \MM and \EE events and the resulting value of \rmue with statistical and systematic uncertainties. In the central lepton selection, the \MM yield is about 18\% higher than the \EE yield. Similar results are observed on Drell-Yan simulation. For events with leptons in the forward region, a larger asymmetry between muons and electrons is observed, as expected since the harsher pileup environment in the detector endcaps has a stronger effect on the electron efficiencies. Here the \MM yield is about 40\% higher than the \EE yield. 
@@ -117,36 +120,43 @@ The systematic uncertainties assigned to the measured values of \rmue are 10\% f
 \begin{minipage}[t]{0.49\textwidth}
 \includegraphics[width=\textwidth]{plots/BG/rmue/rMuE_ZPeakControlForward_Full2012_NJets_None.pdf}
 \end{minipage}
-\caption{Dependencies of \rmue on \mll (top), \MET (middle), and \njets (bottom) for the central (left) and forward (right) lepton selection. The results on data are shown in black while $t\bar{t}$ simulation is shown in green. The central value is shown as a brown dashed line while the systematic uncertainty is shown as an orange band.}
+\caption{Dependencies of \rmue on \mll (top), \MET (middle), and \njets (bottom) for the central (left) and forward (right) lepton selection. The results on data are shown in black while $t\bar{t}$ simulation is shown in green. The central value is shown as a brown dashed line while the assigned systematic uncertainty of 10\% for the central and 20\% for the forward lepton selection is shown as an orange band.}
 \label{fig:rmueDependencies}
 \end{figure} 
 \subsubsection{Measurement of \RT}
 \label{sec:triggerEffs}
-The trigger efficiencies are measured utilizing an event sample collected with the \HT triggers discussed in Section~\ref{sec:trigger}. Lepton pairs corresponding to the flavour combination of the trigger in question are selected. To ensure that only correctly reconstructed events are considered in the calculation of the trigger efficiencies, the events are required to have $\HT > \unit{200}{\giga\electronvolt}$. This excludes events which are completely different in their properties on trigger and analysis level and at the same time is lower than the threshold applied in the trigger because the \HT definition on trigger level differs from the one used offline. To ensure that the factorisation method is performed on event samples completely orthogonal to the signal region and the flavour-symmetric control region, events with $\njets \geq 2$ and $\MET > \unit{100}{\giga\electronvolt}$ are rejected. As the offline lepton selection has more strict requirements compared to the one applied at HLT level, the dilepton triggers should have accepted all these events. The trigger efficiency is therefore defined as the ratio of accepted events by the total number of events:
+The trigger efficiencies are measured utilizing an event sample collected with the \HT triggers discussed in Section~\ref{sec:trigger}. Lepton pairs corresponding to the flavour combination of the trigger in question are selected. To ensure that only correctly reconstructed events are considered in the calculation of the trigger efficiencies, the events are required to have $\HT > \unit{200}{\giga\electronvolt}$. This excludes events which are completely different in their properties on trigger and analysis level and at the same time is lower than the threshold applied in the trigger because the \HT definition on trigger level differs from the one used offline. To ensure that the factorisation method is performed on event samples completely orthogonal to the signal region and the flavour-symmetric control region, events with $\njets \geq 2$ and $\MET > \unit{100}{\giga\electronvolt}$ are rejected. This ensures that the direct measurement of \Rsfof and the factorisation method remain statistically independent. As the offline lepton selection has more strict requirements compared to the one applied at HLT level, the dilepton triggers should have accepted all these events. The trigger efficiency is therefore defined as the ratio of accepted events by the total number of events:
 \begin{equation*}
 \epsilon_{\ell\ell}^T = \frac{N_{\text{events}}(H_T\text{ trigger} \cap \ell\ell\text{ selection} \cap \ell\ell\text{ trigger})}{N_{\text{events}}(H_T\text{ trigger} \cap \ell\ell\text{ selection})}.
 \end{equation*}
-In case of \MM and OF events, two triggers are used in the event selection. Therefore, their combined efficiency is measured, requiring the logical OR of both. The resulting efficiencies are summarised in Table~\ref{tab:EffValues_Seperated}, separately for the central and forward lepton selections. The efficiencies on simulation are measured with much higher statistical precision because the trigger prescales are not applied there. The trigger efficiencies for \EE and \MM are about 97\% in both the central and forward selection. The efficiency for OF events is lower, about 95\% in the central and 90\% in the forward selection. This shows how the flavour symmetry is broken at trigger level by the inclusion of the additional dimuon trigger, which recovers efficiency for the trailing muon leg of the trigger and is not present in the OF triggers.   
+In case of \MM and OF events, two triggers are used in the event selection. Therefore, their combined efficiency is measured, requiring the logical OR of both. The resulting efficiencies are summarised in Table~\ref{tab:EffValues_Seperated}, separately for the central and forward lepton selections. As discussed in Section~\ref{{sec:trigger}}, the \HT had to be prescaled during the data taking. The efficiencies on simulation are therefore measured with much higher statistical precision, as this prescales are not applied there. The trigger efficiencies for \EE and \MM are about 97\% in both the central and forward selection. The efficiency for OF events is lower, about 95\% in the central and 90\% in the forward selection. This shows how the flavour symmetry is broken at trigger level by the inclusion of the additional dimuon trigger, which recovers efficiency for the trailing muon leg of the trigger and is not present in the OF triggers.   
 \input{tab/table_TriggerEffsExclusive_Seperated.tex}
-To assess the systematic uncertainties of the trigger efficiency measurement, potential biases due to the choice of the orthogonal trigger  are studied on simulation, using dileptonic $t\bar{t}$ events. On simulation the efficiency can be measured without the requirement of the \HT triggers, as no trigger is needed to select the events. The ratio of this true trigger efficiencies to those measured with the \HT triggers as a function of \mll is shown in Figure~\ref{fig:triggerEffBias}, separately for SF and OF events. In both cases all deviations from unity are in the order of 0.1\% and well compatible with it inside the statistical uncertainties. No bias of the efficiency measurement due to the \HT triggers is observed and therefore no systematic uncertainty due to this choice is assigned to the measurement.
+To assess the systematic uncertainties of the trigger efficiency measurement, potential biases due to the choice of the orthogonal trigger  are studied on simulation, using dileptonic $t\bar{t}$ events. On simulation the efficiency can be measured without the requirement of the \HT triggers, as no trigger is needed to select the events. The ratio of the efficiencies measured with the \HT triggers to those true efficiencies as a function of \mll is shown on the left side of Figure~\ref{fig:triggerEffBias}, separately for SF and OF events. In both cases all deviations from unity are in the order of 0.1\% and well compatible with unity inside the statistical uncertainties. No bias of the efficiency measurement due to the \HT triggers is observed and therefore no systematic uncertainty due to this choice is assigned to the measurement.
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.35]{plots/BG/trigger/Triggereff_AlphaTSyst_PFHT_HighHTExclusive_Full2012_Mll_None.pdf}
-\caption{Ratio of true trigger efficiencies to those calculated using the \HT triggers separately for SF and OF events.}
+\begin{minipage}[t]{0.49\textwidth}
+\includegraphics[scale=0.375]{plots/BG/trigger/Triggereff_AlphaTSyst_PFHT_HighHTExclusive_Full2012_Mll_None.pdf}
+\end{minipage}
+\begin{minipage}[t]{0.49\textwidth}
+\includegraphics[scale=0.375]{plots/BG/trigger/Triggereff_AlphaTSyst_AlphaT_HighHTExclusive_Full2012_Mll_None.pdf}
+\end{minipage}
+\caption{The ratio of trigger efficiencies calculated using the \HT ($\alpha_{\mathrm{T}}$) triggers to the true efficiencies is shown on the left (right) side, separately for SF and OF events.}
 \label{fig:triggerEffBias}
 \end{center}
 \end{figure}
 
-The turn-on of the triggers at low lepton \pt is of particular interest because asymmetries between the lepton flavours are more likely to occur in this difficult environment. The dependence of the trigger efficiency on the \pt of the trailing lepton can be studied using datasets triggered by single lepton triggers. Triggers with \pt thresholds of $\unit{24 (27)}{\giga\electronvolt}$ for muons (electrons) are available. These thresholds are relatively low for single lepton triggers, resulting in very strict selection criteria applied on HLT level. Dilepton events are selected, in which the leading lepton can be matched  geometrically to the trigger object that fired the single lepton trigger. The trailing lepton is matched to trigger objects that have fired the trailing leg of the dilepton trigger. The efficiency is defined as the ratio of the number of events in which the dilepton trigger has fired, over the total number of dilepton events. The resulting efficiency curves are shown in Figure~\ref{fig:triggerEffTrailing} for four different trailing lepton trigger legs and combining the central and forward selection. The efficiency for trailing electrons is virtually the same for the dielectron and OF triggers (black and light blue markers). The same is not true for trailing muons in the dimuon and OF triggers (red and dark blue markers), caused by the increased efficiency for trailing muons in the $\mu\mu$ channel, which is significantly higher than those in the trigger paths not using the tracker information, as expected. Trailing muons have a much sharper turn-on than trailing electrons and are fully efficient already at a \pt of $\unit{10}{\giga\electronvolt}$. For electrons the plateau is reached only at about $\unit{\approx 30}{\giga\electronvolt}$. The turn-on is steeper for trailing electrons in the dielectron trigger compared to those in the OF trigger, resulting in an increased deviation from flavour symmetry below $\unit{20}{\giga\electronvolt}$. As the precision and stability of the background prediction was given priority over lepton acceptance in the design of the analysis, events with trailing leptons in this \pt range are rejected.  
+The turn-on of the triggers at low lepton \pt is of particular interest because asymmetries between the lepton flavours are more likely to occur in this difficult environment. The dependence of the trigger efficiency on the \pt of the trailing lepton can be studied using datasets triggered by single lepton triggers. Triggers with \pt thresholds of $\unit{24 (27)}{\giga\electronvolt}$ for muons (electrons) are available. These thresholds are relatively low for single lepton triggers, resulting in very strict selection criteria applied on HLT level. Dilepton events are selected, in which the leading lepton can be matched  geometrically to the trigger object that fired the single lepton trigger. The trailing lepton is matched to trigger objects that have fired the trailing leg of the dilepton trigger. The efficiency is defined as the ratio of the number of events in which the dilepton trigger has fired, over the total number of dilepton events. The resulting efficiency curves are shown in Figure~\ref{fig:triggerEffTrailing} for four different trailing lepton trigger legs and combining the central and forward selection. The asymptotic efficiency for trailing electrons is virtually the same for the dielectron and OF triggers (black and light blue markers). The same is not true for trailing muons in the dimuon and OF triggers (red and dark blue markers), caused by the increased efficiency for trailing muons in the $\mu\mu$ channel, which is significantly higher than those in the trigger paths not using the tracker information, as expected. Trailing muons have a much sharper turn-on than trailing electrons and are fully efficient already at a \pt of $\unit{10}{\giga\electronvolt}$. For electrons the plateau is reached only at about $\unit{\approx 30}{\giga\electronvolt}$. The turn-on is steeper for trailing electrons in the dielectron trigger compared to those in the OF trigger, resulting in an increased deviation from flavour symmetry below $\unit{20}{\giga\electronvolt}$. As the precision and stability of the background prediction was given priority over lepton acceptance in the design of the analysis, events with trailing leptons in this \pt range are rejected.  
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.35]{plots/BG/trigger/Triggereff_SingleLepton_HighHTExclusive_Full2012_TrailingPt_leadingPt30Single.pdf}
+\includegraphics[scale=0.45]{plots/BG/trigger/Triggereff_SingleLepton_HighHTExclusive_Full2012_TrailingPt_leadingPt30Single.pdf}
 \caption{Efficiency of the trailing lepton legs of the dilepton trigger measured on a sample of data events selected with single lepton triggers as a function of the \pt of the trailing lepton. The asymptotic efficiency with its statistical uncertainties are determined by fitting a constant in the range $\unit{\pt > 40}{\giga\electronvolt}$}
 \label{fig:triggerEffTrailing}
 \end{center}
 \end{figure} 
 
-To assess the systematic uncertainties of the trigger efficiency measurement, the dependency of \RT, as used in the calculation of \Rsfof, on different observables is tested. Here a dataset triggered by $\alpha_\mathrm{T}$ triggers is used, as the \HT triggers do not provide enough events for these studies. A 5\% systematic uncertainty is assigned to each trigger efficiency, resulting in an uncertainty of 6.4\% on \RT, covering all observed deviations from the measured value of \RT within the statistical uncertainties, as shown in Figure~\ref{fig:RTDependencies}. Studies of further variables can be found in Appendix~\ref{app:RT}. The mean \RT values displayed in the figures are obtained using the $\alpha_{\mathrm{T}}$ trigger as baseline and therefore differ from the nominal result obtained using the \HT triggers. 
+To assess the systematic uncertainties of the trigger efficiency measurement, the dependency of \RT, as used in the calculation of \Rsfof, on different observables is tested. Here a dataset triggered by $\alpha_\mathrm{T}$ triggers is used, as the \HT triggers do not provide enough events for these studies. The use of this triggers is motivated by the fact that they also rely on hadronic event properties and are therefore exhibit no significant correlation with the dilepton triggers, as is the case with the \HT triggers. This is illustrated on the right side of Figure~\ref{fig:triggerEffBias}, where the efficiencies measured using the $\alpha_{\mathrm{T}}$ triggers are compared to the true efficiency as a function of \mll. As $\alpha_{\mathrm{T}}$ is designed to suppress SM backgrounds, the available statistics for this test is low compared to the case of the \HT triggers. However, no significant deviation from unity is observed, which validates the use of the $\alpha_{\mathrm{T}}$ triggers for this studies.
+
+A 5\% systematic uncertainty is assigned to each trigger efficiency, resulting in an uncertainty of 6.4\% on \RT, covering all observed deviations from the measured value of \RT within the statistical uncertainties, as shown in Figure~\ref{fig:RTDependencies}. Studies of further variables can be found in Appendix~\ref{app:RT}. The mean \RT values displayed in the figures are obtained using the $\alpha_{\mathrm{T}}$ trigger as baseline and therefore differ from the nominal result obtained using the \HT triggers. 
 \begin{figure}[htbp]
 \centering
 \begin{minipage}[t]{0.49\textwidth}
@@ -167,13 +177,13 @@ To assess the systematic uncertainties of the trigger efficiency measurement, th
 \begin{minipage}[t]{0.49\textwidth}
 \includegraphics[width=\textwidth]{plots/BG/trigger/Triggereff_SFvsOF_Syst_AlphaT_HighHTExclusiveForward_Full2012_NJets_None.pdf}
 \end{minipage}
-\caption{Dependencies of \RT on \mll (top), \MET (middle), and \njets (bottom) for the central (left) and forward (right) lepton selection. The results on data are shown in black. The central value is shown as a black dashed line while the systematic uncertainty is shown as an orange band.}
+\caption{Dependencies of \RT on \mll (top), \MET (middle), and \njets (bottom) for the central (left) and forward (right) lepton selection. The $\alpha_{\mathrm{T}}$ triggers are used as baseline trigger to select the events. The results on data are shown in black. The central value is shown as a black dashed line while the systematic uncertainty is shown as an orange band.}
 \label{fig:RTDependencies}
 \end{figure} 
 \subsubsection{Results of the factorisation method}
 The results of the factorisation methods are summarised in Table~\ref{tab:factorisation}. The factor $R_T$ is calculated from the trigger efficiencies in Table~\ref{tab:EffValues_Seperated} via Equation~\ref{eq:RT}. The resulting correction factors \Rsfof, \Reeof, and \Rmmof are calculated as described in Equations~\ref{eq:nee}-\ref{eq:nsf}.  
 \input{tab/table_factorization_result.tex}
-As for the direct measurements in the control region, the observed deviations of \Rsfof from one are small and inside the uncertainties of the method. Because the uncertainty on \rmue cancels out to a large degree in the calculation \Rsfof, the total uncertainty is dominated by the uncertainty on \RT, while for \Reeof and \Rmmof the uncertainty of \rmue is the dominant one. This results in much larger uncertainties on the latter two factors. The dependency of \Rsfof on \rmue and \RT as given by Equation~\ref{eq:nsf} is illustrated in Figure~\ref{fig:rmuePropaganda}. The measured values of \rmue and \Rsfof are shown as straight lines, surrounded by bands indicating their uncertainties. The red line shows the value of \Rsfof corresponding to a given \rmue, under the assumption that the trigger efficiencies stay constant. The dashed black lines show the impact, that the uncertainties on the trigger efficiencies have on the resulting \Rsfof. It can be seen that variations of \rmue inside the systematic uncertainties have only little effect on \Rsfof, while changes in the trigger efficiencies have a much larger impact. 
+As for the direct measurements in the control region, the observed deviations of \Rsfof from one are small and inside the uncertainties of the method in the central region. In the forward region, a deviation from unity of 10\% is observed both on data and in simulation, as expected from the larger differences in the efficiencies of electrons and muons in this region. Because the uncertainty on \rmue cancels out to a large degree in the calculation \Rsfof, the total uncertainty is dominated by the uncertainty on \RT, while for \Reeof and \Rmmof the uncertainty of \rmue is the dominant one. This results in much larger uncertainties on the latter two factors. The dependency of \Rsfof on \rmue and \RT as given by Equation~\ref{eq:nsf} is illustrated in Figure~\ref{fig:rmuePropaganda}. The measured values of \rmue and \Rsfof are shown as straight lines, surrounded by bands indicating their uncertainties. The red line shows the value of \Rsfof corresponding to a given \rmue, under the assumption that the trigger efficiencies stay constant. The dashed black lines show the impact, that the uncertainties on the trigger efficiencies have on the resulting \Rsfof. It can be seen that variations of \rmue inside the systematic uncertainties have only little effect on \Rsfof, while changes in the trigger efficiencies have a much larger impact. 
 
 
 \begin{figure}[htbp]
@@ -207,7 +217,7 @@ Given that the weighted average is calculated separately for each flavour combin
 \label{sec:validation}
 To judge the performance of the estimation methods for flavour-symmetric backgrounds, they are applied to simulation. In Table~\ref{tab:MCClosure} the resulting SF and OF yields after application of the signal selection are shown separately for the central and forward dilepton selection. The OF yields are corrected by the \Rsfof values derived for simulation shown in Table~\ref{tab:combinedRSFOF}. For completely flavour-symmetric processes, such as \ttbar, $\Z/\gamma^{*}\rightarrow \tau\tau$, or single top-quark production, the difference between the SF and OF yields is compatible with zero within the statistical uncertainties of the simulation and the systematic uncertainties of the method. Other systematic uncertainties affecting the simulation are the same for SF and OF lepton pairs and are therefore not considered here. 
 \input{tab/table_MC_SFOF_Full2012.tex}
- As expected, deviations from flavour-symmetry are observed only for processes containing a \Z boson, most notable $\Z/\gamma^{*}\rightarrow \ell\ell$, but also $\mathrm{WZ}$ or $\mathrm{ZZ}$ production and more rare processes like $t\bar{t}$\Z production. It can therefore be concluded that the background prediction for flavour-symmetric processes performs well within the uncertainties of the methods presented above. The validity of this cross check is restricted to processes well modelled in simulation. As the modelling of leptons not produced in the hard physics process is in general less reliable, more detailed studies are performed on data to ensure that flavour-symmetry also holds for the small contribution of non-prompt leptons, to the final event selection.
+ As expected, deviations from flavour-symmetry are observed only for processes containing a \Z boson, most notable $\Z/\gamma^{*}\rightarrow \ell\ell$, but also $\mathrm{WZ}$ or $\mathrm{ZZ}$ production and more rare processes like $t\bar{t}$\Z production. It can therefore be concluded that the background prediction for flavour-symmetric processes performs well within the uncertainties of the methods presented above. The validity of this cross-check is restricted to processes well modelled in simulation. As the modelling of leptons not produced in the hard physics process is in general less reliable, more detailed studies are performed on data to ensure that flavour-symmetry also holds for the small contribution of non-prompt leptons, to the final event selection.
 \subsubsection*{Study of non-prompt leptons}
 As a preface to studies performed on data, the flavour-symmetry of non-prompt leptons is examined using the truth information of the simulation. A data driven estimate is derived from leptons with relaxed isolation criteria.
 \paragraph*{Non-prompt leptons in simulation}
