--- a/results.tex
+++ b/results.tex
@@ -1,9 +1,9 @@
 \label{sec:counting}
-In the counting experiment approach, the observed yield of SF events is compared to the combined background estimates from flavour-symmetric and Drell--Yan backgrounds in the six region defined in \mll and lepton $|\eta|$. Here, the results are presented and further investigations into their properties are discussed. Also the implications of these results on the  simplified models discussed in section~\ref{sec:models} is examined.  
+In the counting experiment approach, the observed yield of SF events is compared to the combined background estimates from flavour-symmetric and Drell--Yan backgrounds in the six regions defined in \mll and lepton $|\eta|$. Here, the results are presented and further investigations into their properties are discussed. Also, the implications of these results on the  simplified models discussed in section~\ref{sec:models} are examined.  
 \section{Results and further studies}
 
 \label{sec:candcresults}
-The distribution of the dilepton invariant mass in the central and forward signal regions (see Table~\ref{tab:selections}) are shown in Figure~\ref{fig:resultsCC}. The resulting event yields are compared to the expectation from SM backgrounds in Table~\ref{tab:METresults2012}. A maximum likelihood fit is performed in each region to find the best estimator for the difference of expected and observed yield. The significances of deviations of this difference from zero are evaluated using the profile likelihood ratio of the signal and signal plus background hypotheses~\cite{HiggsTool1}. In general, the observed data is in agreement with the background estimation within about one standard deviation, except for the low-mass region for central leptons. Here, the observed yield exceeds the expectation by $109\pm48$ events. The size of this excess corresponds to a local significance of 2.2~$\sigma$.  
+The distribution of the dilepton invariant mass in the central and forward signal regions (see Table~\ref{tab:selections}) are shown in Figure~\ref{fig:resultsCC}. The resulting event yields are compared to the expectation from the backgrounds in Table~\ref{tab:METresults2012}. A maximum likelihood estimator for the difference of expected and observed yield is determined in each region. The significances of deviations of this difference from zero are evaluated using a profile likelihood ratio of the signal and signal plus background hypotheses~\cite{HiggsTool1}. In general, the observed data is in agreement with the background estimation within about one standard deviation, except for the low-mass region for central leptons. Here, the observed yield exceeds the expectation by $109\pm48$ events. The size of this excess corresponds to a local significance of 2.2~$\sigma$.  
 \begin{figure}[htbp]
 \centering
 \begin{minipage}[t]{0.49\textwidth}
@@ -18,18 +18,18 @@ The distribution of the dilepton invariant mass in the central and forward signa
 \end{figure} 
 
 \input{tab/table_cutNCount_Result_SF.tex}
-In the Tables~\ref{tab:METresults2012EE} and~\ref{tab:METresults2012MM}, the results are shown separately for \EE and \MM events. As expected from the fact that \rmue is larger than one, the yields in the \MM channel are slightly larger than in the \EE channel. For the flavour-symmetric backgrounds, and therefore also for the total background estimates and the difference of observation and estimation, the yields in the \EE and \MM channels do not exactly add up to those in the combined SF channel presented in Table~\ref{tab:METresults2012}. This is caused by the weighted average of the two methods to determine the correction factors used to translate from OF into the different SF channels, which is calculated separately for \Rsfof, \Reeof, and \Rmmof, as discussed in Section~\ref{sec:combinedRSFOF}. Comparing the two channels, consistent results are observed between them, except for the slight excess in the high-mass central region, which is driven dominantly from \EE events. Especially for the larger excess in the low-mass central region, the observation agrees with the expected behaviour of the different flavours. The signal yields of $47\pm25$ and $67\pm29$ in the \EE and \MM channels correspond to a value of \rmue for this hypothetical signal of $1.19\pm0.41$, in good agreement with the value of $1.09\pm0.11$ measured in the Drell--Yan control region (see Section~\ref{sec:rmue}).
+In the Tables~\ref{tab:METresults2012EE} and~\ref{tab:METresults2012MM}, the results are shown separately for \EE and \MM events. As expected since \rmue is larger than one, the yields in the \MM channel are slightly larger than those in the \EE channel. For the flavour-symmetric backgrounds, and therefore also for the total background estimates and the difference of observation and estimation, the yields in the \EE and \MM channels do not exactly add up to those in the combined SF channel presented in Table~\ref{tab:METresults2012}. This is caused by the weighted average of the two methods to determine the correction factors used to translate from OF into the different SF channels, which is calculated separately for \Rsfof, \Reeof, and \Rmmof, as discussed in Section~\ref{sec:combinedRSFOF}. Comparing the two channels, consistent results are observed between them, except for the slight excess in the high-mass central region, which is dominated by \EE events. Especially for the larger excess in the low-mass central region, the observation agrees with the expected behaviour of the different flavours. The signal yields of $47\pm25$ and $67\pm29$ in the \EE and \MM channels correspond to a value of \rmue for this hypothetical signal of $1.19\pm0.41$, in good agreement with the value of $1.09\pm0.11$ measured in the Drell--Yan control region (see Section~\ref{sec:rmue}).
 \input{tab/table_cutNCount_Result_EE.tex}
 
 \input{tab/table_cutNCount_Result_MM.tex}
 
 
-\subsection*{Investigating the low-mass central region}
-While a significance of $2.2\sigma$ is no clear indication for the presence of new physics, more detailed studies into the properties of this excess are conducted. 
+\subsection*{Investigating the excess in the low-mass central region}
+While a significance of $2.2\sigma$ is no clear indication for the presence of new physics, more detailed studies of the properties of this excess are conducted. 
 
 The development of the excess during the data taking period in 2012 is shown on the left side of Figure~\ref{fig:timeDependece}, while the right side shows the low-mass forward region for comparison. The data sample is split into 10 bins, each corresponding to 2\,$\mathrm{fb}^{-1}$ within 1\%, except for the last which corresponds to only  about 1.5\,$\mathrm{fb}^{-1}$. For each of these bins the observed SF yield and the prediction for flavour-symmetric backgrounds from OF is shown, together with the difference of the two. The very small contribution from Drell--Yan backgrounds of typically less than 1 event per bin is neglected in this representation of the result. For the first four bins, corresponding to the first 8\,$\mathrm{fb}^{-1}$ of data collected in 2012, the SF yield is significantly higher than the prediction from OF. This effect diminishes in the fifth bin, where the SF yield decreases and the prediction from OF increases. In the following five bins, representing the second half of the data sample, good agreement is observed between the observed SF yield and the prediction from OF. This change in behaviour between the two halves is caused in roughly equal manner by a decrease in the observed SF yield and an increase in the observed OF yield per bin. In contrast to this observations, the SF yield and the background prediction are compatible within uncertainties for all bins in the low-mass forward region. The difference between the two therefore fluctuates around zero.
 
-\begin{figure}[htbp]
+\begin{figure}[tb]
 \centering
 \begin{minipage}[t]{0.49\textwidth}
   \includegraphics[width=\textwidth]{plots/results/YieldvsLumi_Bins_SignalCentral_Mll_edgeMassFull2012.pdf}
@@ -38,21 +38,21 @@ The development of the excess during the data taking period in 2012 is shown on 
 \includegraphics[width=\textwidth]{plots/results/YieldvsLumi_Bins_SignalForward_Mll_edgeMassFull2012.pdf}
 \end{minipage}
 
-\caption{Observed SF yields and background prediction from OF as well as the difference of these two in the low-mass central (left) and forward (right) signal region in 10 bins of roughly equal integrated luminosity. Non-flavour-symmetric backgrounds are not included in this representation of the result.}
+\caption{Observed SF yields and background prediction from OF as well as the difference of these two in the low-mass central (left) and forward (right) signal region in 10 bins of roughly equal integrated luminosity. The bins are shown in the order the data has been recorded. Non-flavour-symmetric backgrounds are not included in this representation of the result.}
 \label{fig:timeDependece}
 \end{figure}
 
-To get a clearer picture of the properties of the excess and also to check for some of the more obvious possible systematic effects that might cause it, the counting experiment in the low-mass central region is repeated several times, varying the selection requirements. The results are shown in Table~\ref{tab:CountingCrosschecks}. As no Drell-Yan prediction for the on-\Z region is available for the different configurations, the observed yield is extrapolated into the low-mass region after subtraction of flavour-symmetric background using the prediction from OF. For all these cross-checks presented here one has to keep in mind that for the background prediction from OF the \Rsfof factor derived for the default selection is used.
+To get a clearer picture of the properties of the excess and also to check for some of the more obvious possible systematic effects that might cause it, the counting experiment in the low-mass central region is repeated several times, varying the selection requirements. The results are shown in Table~\ref{tab:CountingCrosschecks}. As no Drell-Yan prediction for the on-\Z region is available for the different selection configurations, the observed yield is extrapolated into the low-mass region after subtraction of flavour-symmetric background using the prediction from OF. For the background prediction from OF the \Rsfof factor derived for the default selection is used in all these cross-checks presented here.
 
-As the signal region is dominated by events containing b-tagged jets, it seems natural to test the excess for its b-tag content. Splitting the data sample into events with at least one and those without a b-tag, it is evident that, while constituting about 23\% of the total yield, less than 10\% of the excess is located in events without a b-tagged jet. 
+As the dominant background in the signal region produces b-tagged jets, it seems natural to test the excess for its b-tag content. Splitting the data sample into events with at least one and events without a b-tag, it is evident that, while constituting about 23\% of the total yield, less than 10\% of the excess is located in events without a b-tagged jet. 
 
-In addition to the default selection of $\pt > \unit{20}{\giga\electronvolt}$, four other configurations for the lepton \pt requirement are tested. Three of them feature asymmetric cuts on the \pt of the leading and trailing lepton. The selection of $\pt > 20(10)$ and $ \pt > 30(10)\GeV$ extend the acceptance of the analysis to lower trailing lepton \pt. For both of these selections, an increased signal yield is observed. On the other hand, raising the trailing \pt threshold to 30\GeV disproportionally reduces the observed excess, retaining only about 13\% of the excess yield compared to 23\% of the overall event yield. 
+In addition to the default selection of $\pt > \unit{20}{\giga\electronvolt}$, four other configurations for the lepton transverse momentum requirement are tested. Three of them feature asymmetric cuts on the \pt of the leading and trailing lepton. The selection of $\pt > 20(10)\GeV$ and $ \pt > 30(10)\GeV$ extend the acceptance of the analysis to lower trailing lepton \pt. For both of these selections, an increased signal yield is observed. On the other hand, raising the trailing \pt threshold to 30\GeV disproportionally reduces the observed excess, retaining only about 13\% of the excess yield compared to 23\% of the overall event yield. 
 
 Although it has already been established in Section~\ref{sec:validation} that non-prompt leptons only account for a small part of the selected data sample and are also fully flavour-symmetric, the counting experiment is repeated with significantly tighter isolation requirements. The relative isolation is required to be smaller than 5\%, reducing the size of the selected sample by about one third. The number of observed signal events is reduced by almost exactly the same amount. This further increases the confidence that the observed effect is due to prompt lepton production.
 
-To test for a possible pileup dependence of the observed effect, the sample is split into three subsets of similar size depending on the number of reconstructed vertices ($N_{\mathrm{Vertex}}$). The events are categorised as either low-pileup ($N_{\mathrm{Vertex}} < $13), mid-pileup (13 $\leq N_{\mathrm{Vertex}} <$ 17) or high-pileup ($N_{\mathrm{Vertex}} \geq $17). The excess is observed consistently in all three subsets, excluding a possible pileup dependence of excess. 
+To test for a possible pileup dependence of the observed effect, the sample is split into three subsets of similar size depending on the number of reconstructed vertices ($N_{\mathrm{Vertex}}$). The events are categorised as either low-pileup ($N_{\mathrm{Vertex}} < $13), medium-pileup (13 $\leq N_{\mathrm{Vertex}} <$ 17) or high-pileup ($N_{\mathrm{Vertex}} \geq $17). The excess is observed consistently in all three subsets, excluding a possible pileup dependence of the excess. 
 
-Three additional \MET reconstructions are tested. TC \MET and type-I corrected PF \MET have been described in Section~\ref{sec:PF}. In addition to these general algorithms, an analysis-specific definition of missing $H_{\mathrm{T}}$ is used, which is calculated using only selected jets and leptons. It is defined as the absolute value of the negative vector sum of the transverse momenta of these objects: 
+Three additional \MET reconstruction algorithms are tested. Track-corrected (TC) \MET and type-I corrected PF \MET have been described in Section~\ref{sec:PF}. In addition to these general algorithms, an analysis-specific definition of missing $H_{\mathrm{T}}$ is used, which is calculated using only selected jets and leptons. It is defined as the absolute value of the negative vector sum of the transverse momenta of these objects: 
 \begin{equation*}
 H_{\mathrm{T}}^{\mathrm{miss}} = \abs{ -\left(\sum\limits_{\mathrm{jets}}\vec{p}_{\mathrm{T}} + \sum\limits_{\mathrm{leptons}}\vec{p}_{\mathrm{T}}\right) }.
 \end{equation*}
@@ -63,9 +63,9 @@ Separating the data sample into events with low \HT ($\unit{100}{\giga\electronv
 
 \input{tab/table_cutNCount_CrossChecks_central.tex}
 
-The distributions of several observables in the low-mass signal region is shown in Figure~\ref{fig:dependencies}. Each time the observed data is compared to the prediction from OF events. The contribution from Drell--Yan backgrounds is neglected. The excess is located predominantly in events with one or two b-tagged jets, but no excess is observed for higher b-tag multiplicities. Furthermore, it is located almost inclusively in events with three jets. It is present in events with a \pt of the leading lepton of up to $\unit{60}{\giga\electronvolt}$. For events with a trailing lepton \pt above $\unit{25}{\giga\electronvolt}$, only a small deviation from the expectation is observed. The excess seems to favour low values of \MET and is roughly uniformly distributed in \HT. 
+The distributions of several observables in the low-mass signal region are shown in Figure~\ref{fig:dependencies}. Each time the observed data are compared to the prediction from OF events. The contribution from Drell--Yan backgrounds is neglected. The excess is located predominantly in events with one or two b-tagged jets, but no excess is observed for higher b-tag multiplicities. Furthermore, it is located almost inclusively in events with three jets. It is present in events with a \pt of the leading lepton of up to $\unit{60}{\giga\electronvolt}$. For events with a trailing lepton \pt above $\unit{25}{\giga\electronvolt}$, only a small deviation from the expectation is observed. The excess seems to favour low values of \MET and is roughly uniformly distributed in \HT. 
 
-In all performed studies, no evidence for systematic effects causing the observed excess is found. The two major distinguishing features of the events causing the deviation are the presence of at least one b-tagged jet and trailing leptons with very low \pt. In general, no features distinguishing the events in the excess from the dominant \ttbar background are observed in any of the performed studies. 
+In all performed studies, no evidence for systematic effects causing the observed excess is found. The two major distinguishing features of the events causing the deviation are the presence of at least one b-tagged jet and trailing leptons with very low \pt. In general, no features distinguishing the events in the excess from the dominant \ttbar background are observed in any of the performed studies. Therefore, the excess is consistent with a statistical fluctuations of the background. 
 
 \begin{figure}[htbp]
 \centering
