--- a/tab/table_fit_comparison.tex
+++ b/tab/table_fit_comparison.tex
@@ -14,7 +14,7 @@
     \hline
         nominal       &  170$\pm$23  &  2293$\pm$45 &  1.024$\pm$0.027 &  140$\pm$43 &   $82.4^{+2.1}_{-3.3}$      & 2.5  \\
         sum of Gaussians       &  168$\pm$24  &  2292$\pm$44 &  1.023$\pm$0.027 &  146$\pm$50 &   $82.1^{+2.2}_{-3.7}$      & 2.7  \\
-        kernel density estimation       &  154$\pm$22  &  2296$\pm$43 &  1.028$\pm$0.026 &  141$\pm$41 &   $81.7^{+2.3}_{-3.4}$      & 3.1  \\
+        KDE       &  154$\pm$22  &  2296$\pm$43 &  1.028$\pm$0.026 &  141$\pm$41 &   $81.7^{+2.3}_{-3.4}$      & 3.1  \\
         histogram       &  140$\pm$23  &  2296$\pm$43 &  1.029$\pm$0.026 &  153$\pm$41 &   $83.0^{+1.7}_{-2.4}$      & 3.5  \\
         2011 shape       &  181$\pm$23  &  2290$\pm$43 &  1.020$\pm$0.026 &  146$\pm$46 &   $82.8^{+1.9}_{-2.5}$      & 2.7  \\
 
