--- a/thesis.bib
+++ b/thesis.bib
@@ -897,7 +897,7 @@ language={English}
       SLACcitation   = "%%CITATION = CERN-THESIS-2014-142 ETC.;%%",
       school        = "Aachen, RWTH Aachen University",
       year          = "2014",
-      note 			= "\url{http://web.physik.rwth-aachen.de/service/wiki/pub/Feld/FeldAbschlussarbeiten/Masterarbeit_Christian_Schomakers.pdf}",
+      note 			= "\url{http://cds.cern.ch/record/1954185}",
       
 }
 
@@ -1154,6 +1154,10 @@ keywords = "Supersymmetry "
       title          = "{Search for physics beyond the standard model in events
                         with two leptons, jets, and missing transverse momentum in
                         pp collisions at $\sqrt{s}$ = 8 TeV}",
+	  journal={JHEP},
+	  volume={1504},
+      pages={124},
+      doi={10.1007/JHEP04(2015)124},                        
       collaboration  = "CMS",
       year           = "2015",
       eprint         = "1502.06031",
@@ -1161,7 +1165,6 @@ keywords = "Supersymmetry "
       primaryClass   = "hep-ex",
       reportNumber   = "CMS-SUS-14-014, CERN-PH-EP-2015-033, FERMILAB-PUB-15-062-CMS",
       SLACcitation   = "%%CITATION = ARXIV:1502.06031;%%",
-      note 			 = "Accepted by JHEP\fixme{look for publication}"
 }        
 }
 
@@ -1488,4 +1491,55 @@ issn = "0550-3213",
 doi = "http://dx.doi.org/10.1016/0550-3213(74)90355-1",
 url = "http://www.sciencedirect.com/science/article/pii/0550321374903551",
 author = "J. Wess and B. Zumino"
+}
+
+
+
+@PHDTHESIS{Edelhoff:445011,
+      author       = {Edelhoff, Matthias H.},
+      title        = {{S}earch for supersymmetry in opposite sign dilepton final
+                      states including tau leptons with the {CMS} experiment},
+      school        = "Aachen, RWTH Aachen University",
+      year         = {2014},
+      note          = {\url{https://publications.rwth-aachen.de/record/445011}},
+}
+
+
+@article{Nojiri:1999ki,
+      author         = "Nojiri, Mihoko M. and Yamada, Youichi",
+      title          = "{Neutralino decays at the CERN LHC}",
+      journal        = "Phys. Rev. D",
+      volume         = "60",
+      pages          = "015006",
+      doi            = "10.1103/PhysRevD.60.015006",
+      year           = "1999",
+      eprint         = "hep-ph/9902201",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "YITP-99-4, TU-559",
+      SLACcitation   = "%%CITATION = HEP-PH/9902201;%%",
+}
+
+
+@article{PhysRevD.55.5520,
+  title = {Precision SUSY measurements at CERN LHC},
+  author = {Hinchliffe, I. and Paige, F. E. and Shapiro, M. D. and S\"oderqvist, J. and Yao, W.},
+  journal = {Phys. Rev. D},
+  volume = {55},
+  pages = {5520},
+  numpages = {0},
+  year = {1997},
+  doi = {10.1103/PhysRevD.55.5520},
+}
+
+@article{1748-0221-10-02-P02006,
+  collaboration={CMS},
+  title={Performance of the CMS missing transverse momentum reconstruction in pp data at $\sqrt{s}$ = 8 TeV},
+  journal={JINST},
+  volume={10},
+  doi            = "10.1088/1748-0221/10/02/P02006",  
+  eprint         = "1411.0511",
+  archivePrefix  = "arXiv",
+  pages={P02006},
+  year={2015},
 }
